update all tabs and codeblocktabs instances to have type prop where necessary

--- a/docs/account-portal/custom-redirects.mdx
+++ b/docs/account-portal/custom-redirects.mdx
@@ -11,7 +11,7 @@ After a user signs in or signs up, Clerk automatically redirects users back to y
 
 You can define the paths you want the users to be redirected to via environment variables. In this example, we redirect users to `/dashboard` after signing in, and to `/onboarding` after signing up.
 
-<CodeBlockTabs options={['Next.js', 'Remix']}>
+<CodeBlockTabs type="framework" options={["Next.js", "Remix"]}>
 ```sh filename=".env"
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/onboarding
@@ -105,7 +105,7 @@ function App() {
 
 In the case that you are using a [`<SignInButton />`](/docs/components/unstyled/sign-in-button) or [`<SignUpButton />`](/docs/components/unstyled/sign-up-button), you can also pass the properties into those components. We recommend defining both `afterSignInUrl` and `afterSignUpUrl` redirects in each button as some users may choose to sign up instead after attempting to sign in.
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<CodeBlockTabs type="framework" options={["Next.js", "React", "Remix", "Gatsby"]}>
   ```jsx filename="pages/index.js"
   import { SignInButton, SignUpButton } from "@clerk/nextjs";
 
