--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -49,7 +49,7 @@ alt="The 'Satellite' tab on the Domains page in the Clerk Dashboard."
 
 You need to configure your satellite application as a satellite application. You can do so with the environment variables below or via properties (see the next step).
 
-<CodeBlockTabs options={["Next.js", "Remix"]}>
+<CodeBlockTabs type="framework" options={["Next.js", "Remix"]}>
 ```env filename=".env.local"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
 CLERK_SECRET_KEY={{secret}}
@@ -82,7 +82,7 @@ The properties related to the multi domain setup are as follows:
 
 The `URL` mentioned above is the request url for server side usage or the current location for client usage.
 
-<Tabs items={['Next.js', 'Remix']}>
+<Tabs type="framework" items={["Next.js", "Remix"]}>
   <Tab>
     You can embed the [`<SignIn />`][signin] component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The [`<SignIn />`][signin] component should be mounted on a public page.
 
