--- a/docs/backend-requests/handling/nodejs.mdx
+++ b/docs/backend-requests/handling/nodejs.mdx
@@ -15,7 +15,7 @@ The Clerk Node SDK offers two authentication middlewares specifically for [Expre
 
 `ClerkExpressWithAuth` is a lax middleware that returns an empty auth object when an unauthenticated request is made.
 
-<CodeBlockTabs options={['JavaScript', 'TypeScript']}>
+<CodeBlockTabs type="js-ts" options={["JavaScript", "TypeScript"]}>
   ```js
   import "dotenv/config"; // To read CLERK_API_KEY
   import { ClerkExpressWithAuth } from "@clerk/clerk-sdk-node";
@@ -85,7 +85,7 @@ app.listen(port, () => {
 
 `ClerkExpressRequireAuth` is a strict middleware that raises an error when an unauthenticated request is made.
 
-<CodeBlockTabs options={['JavaScript', 'TypeScript']}>
+<CodeBlockTabs type="js-ts" options={["JavaScript", "TypeScript"]}>
   ```js
   import "dotenv/config"; // To read CLERK_API_KEY
   import { ClerkExpressRequireAuth } from '@clerk/clerk-sdk-node';
