--- a/docs/backend-requests/making/custom-session-token.mdx
+++ b/docs/backend-requests/making/custom-session-token.mdx
@@ -56,7 +56,7 @@ Now that you have added the custom claims to your session token, you can use the
 
 #### Using `getAuth` in your Next.js application
 
-<CodeBlockTabs options={["App Router", "Pages Router"]}>
+<CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
 ```tsx filename="app/page.[jsx/tsx]"
 import { auth } from '@clerk/nextjs';
 import { NextResponse } from 'next/server';
