--- a/docs/backend-requests/making/same-origin.mdx
+++ b/docs/backend-requests/making/same-origin.mdx
@@ -19,7 +19,7 @@ fetch('/api/foo').then(res => res.json());
 
 If you are using React or Next.js and would like to use the [useSWR](https://swr.vercel.app/) hook, it’s as simple as supplying the API route with whichever fetcher function you are using. Because of the [automatic revalidation feature](https://swr.vercel.app/docs/revalidation) of SWR, you need to retrieve and set the session token in the Authorization header. Call the asynchronous `getToken` method from the [`useAuth()`](/docs/references/react/use-auth) hook and add it as a Bearer token.
 
-<CodeBlockTabs options={["index.jsx", "index.tsx"]}>
+<CodeBlockTabs type="js-ts" options={["JavaScript", "TypeScript"]}>
 ```jsx
 import useSWR from 'swr';
 import { useAuth } from '@clerk/nextjs';
