--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -18,13 +18,13 @@ The `<SignUp />` component renders a UI for signing up users. The functionality 
 
 Below is basic implementation of the `<SignUp />` component. You can use this as a starting point for your own implementation
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby', 'JavaScript']}>
+<Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby", "JavaScript"]}>
   <Tab>
     You can embed the `<SignUp />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignUp />` component should be mounted on a public page.
 
     <Callout>The example below shows the Sign In page mounted on the url /sign-in. For more information on how to implement this, check out the [`<SignIn />` UI page](/docs/components/authentication/sign-in).</Callout>
 
-    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
       ```jsx filename="/app/sign-up/[[...sign-up]]/page.[jsx/tsx]"
       import { SignUp } from "@clerk/nextjs";
 
