--- a/docs/components/control/clerk-loaded.mdx
+++ b/docs/components/control/clerk-loaded.mdx
@@ -9,92 +9,93 @@ The `<ClerkLoaded />` component guarantees that the Clerk object has loaded and 
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix']}>
-<Tab>
-```tsx filename="pages/_app.tsx"
-import "@/styles/globals.css";
-import { ClerkLoaded, ClerkProvider } from "@clerk/nextjs";
-import { AppProps } from "next/app";
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
+  <Tab>
+  ```tsx filename="pages/_app.tsx"
+  import "@/styles/globals.css";
+  import { ClerkLoaded, ClerkProvider } from "@clerk/nextjs";
+  import { AppProps } from "next/app";
 
-function MyApp({ Component, pageProps }: AppProps) {
-  return (
+  function MyApp({ Component, pageProps }: AppProps) {
+    return (
 
-  <ClerkProvider {...pageProps}>
-    <ClerkLoaded>
-      <Component {...pageProps} />
-    </ClerkLoaded>
-  </ClerkProvider>
-  ); 
-}
-
-export default MyApp;
-```
-
-Once you have wrapped your app with `<ClerkLoaded />`, you can access the `Clerk` object without the need to check if it exists.
-
-```tsx filename="pages/index.tsx"
-declare global {
-  interface Window {
-    Clerk: any;
-  }
-}
-
-export default function Home() {
-  return <div>This page uses Clerk {window.Clerk.version}; </div>;
-}
-```
-
-</Tab>
-<Tab>
-```tsx filename="app.tsx"
-import { useEffect } from "react";
-import { ClerkLoaded, ClerkProvider } from "@clerk/clerk-react";
-
-declare global {
-  interface Window {
-    Clerk: any;
-  }
-}
-
-function App() {
-  return (
-    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+    <ClerkProvider {...pageProps}>
       <ClerkLoaded>
-        <Page />
+        <Component {...pageProps} />
       </ClerkLoaded>
     </ClerkProvider>
-  ); 
-}
+    ); 
+  }
 
-function Page() {
-  useEffect(() => {
-    // no need to check if window.Clerk exists
-    document.title = "This page uses Clerk " +
-    window.Clerk.version;
-  }, []);
+  export default MyApp;
+  ```
 
-  return (
-    <div>The content </div>
-  ); 
-}
+  Once you have wrapped your app with `<ClerkLoaded />`, you can access the `Clerk` object without the need to check if it exists.
 
-export default App;
-```
-</Tab>
-<Tab>
-```tsx filename="routes/index.tsx"
-import { ClerkLoaded } from "@clerk/remix";
+  ```tsx filename="pages/index.tsx"
+  declare global {
+    interface Window {
+      Clerk: any;
+    }
+  }
 
-export default function Index() {
-  return (
-    <div>
-      <ClerkLoaded>
-        <div>Clerk is loaded</div>
-        <p>window.Clerk.version</p>
-      </ClerkLoaded>
-    </div>
-  );
-}
-```
-</Tab>
+  export default function Home() {
+    return <div>This page uses Clerk {window.Clerk.version}; </div>;
+  }
+  ```
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app.tsx"
+  import { useEffect } from "react";
+  import { ClerkLoaded, ClerkProvider } from "@clerk/clerk-react";
+
+  declare global {
+    interface Window {
+      Clerk: any;
+    }
+  }
+
+  function App() {
+    return (
+      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+        <ClerkLoaded>
+          <Page />
+        </ClerkLoaded>
+      </ClerkProvider>
+    ); 
+  }
+
+  function Page() {
+    useEffect(() => {
+      // no need to check if window.Clerk exists
+      document.title = "This page uses Clerk " +
+      window.Clerk.version;
+    }, []);
+
+    return (
+      <div>The content </div>
+    ); 
+  }
+
+  export default App;
+  ```
+  </Tab>
+
+  <Tab>
+  ```tsx filename="routes/index.tsx"
+  import { ClerkLoaded } from "@clerk/remix";
+
+  export default function Index() {
+    return (
+      <div>
+        <ClerkLoaded>
+          <div>Clerk is loaded</div>
+          <p>window.Clerk.version</p>
+        </ClerkLoaded>
+      </div>
+    );
+  }
+  ```
+  </Tab>
 </Tabs>
