--- a/docs/components/control/clerk-loading.mdx
+++ b/docs/components/control/clerk-loading.mdx
@@ -9,70 +9,71 @@ The `<ClerkLoading />` renders its children while Clerk is loading, and is helpf
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix']}>
-<Tab>
-```tsx filename="pages/_app.tsx"
-import "@/styles/globals.css";
-import { ClerkLoaded, ClerkLoading, ClerkProvider } from "@clerk/nextjs";
-import { AppProps } from "next/app";
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
+  <Tab>
+  ```tsx filename="pages/_app.tsx"
+  import "@/styles/globals.css";
+  import { ClerkLoaded, ClerkLoading, ClerkProvider } from "@clerk/nextjs";
+  import { AppProps } from "next/app";
 
-function MyApp({ Component, pageProps }: AppProps) {
-  return (
+  function MyApp({ Component, pageProps }: AppProps) {
+    return (
 
-  <ClerkProvider {...pageProps}>
-    <ClerkLoading>
-      <div>Clerk is loading</div>
-    </ClerkLoading>
-    <ClerkLoaded>
-      <Component {...pageProps} />
-    </ClerkLoaded>
-  </ClerkProvider>
-  ); 
-}
-
-export default MyApp;
-```
-</Tab>
-<Tab>
-
-```tsx filename="app.tsx"
-import { ClerkLoaded, ClerkLoading, ClerkProvider } from '@clerk/clerk-react';
-
-function App() {
-  return (
-    <ClerkProvider publishableKey="pk_test_.........................">
+    <ClerkProvider {...pageProps}>
       <ClerkLoading>
         <div>Clerk is loading</div>
       </ClerkLoading>
       <ClerkLoaded>
-        <Page />
+        <Component {...pageProps} />
       </ClerkLoaded>
-      <div>This div is always visible</div>
     </ClerkProvider>
-  );
-}
+    ); 
+  }
 
-function Page() {
-  return <div>The content</div>;
-}
+  export default MyApp;
+  ```
+  </Tab>
 
-export default App;
-```
+  <Tab>
+  ```tsx filename="app.tsx"
+  import { ClerkLoaded, ClerkLoading, ClerkProvider } from '@clerk/clerk-react';
 
-</Tab>
-<Tab>
-```tsx filename="routes/index.tsx"
-import { ClerkLoading } from "@clerk/remix";
+  function App() {
+    return (
+      <ClerkProvider publishableKey="pk_test_.........................">
+        <ClerkLoading>
+          <div>Clerk is loading</div>
+        </ClerkLoading>
+        <ClerkLoaded>
+          <Page />
+        </ClerkLoaded>
+        <div>This div is always visible</div>
+      </ClerkProvider>
+    );
+  }
 
-export default function Index() {
-  return (
-    <div>
-      <ClerkLoading>
-        <div>Clerk is loading</div>
-      </ClerkLoading>
-    </div>
-  );
-}
-```
-</Tab>
+  function Page() {
+    return <div>The content</div>;
+  }
+
+  export default App;
+  ```
+
+  </Tab>
+
+  <Tab>
+  ```tsx filename="routes/index.tsx"
+  import { ClerkLoading } from "@clerk/remix";
+
+  export default function Index() {
+    return (
+      <div>
+        <ClerkLoading>
+          <div>Clerk is loading</div>
+        </ClerkLoading>
+      </div>
+    );
+  }
+  ```
+  </Tab>
 </Tabs>
