--- a/docs/components/control/multi-session.mdx
+++ b/docs/components/control/multi-session.mdx
@@ -9,47 +9,47 @@ The `<MultisessionAppSupport />` provides a wrapper for your React application t
 
 ## Usage
 
-<Tabs items={['Next.js', 'React']}>
-<Tab>
-```tsx filename="pages/_app.tsx"
-import "@/styles/globals.css";
-import { MultisessionAppSupport,ClerkProvider } from "@clerk/nextjs";
-import { AppProps } from "next/app";
+<Tabs type="framework" items={["Next.js", "React"]}>
+  <Tab>
+  ```tsx filename="pages/_app.tsx"
+  import "@/styles/globals.css";
+  import { MultisessionAppSupport,ClerkProvider } from "@clerk/nextjs";
+  import { AppProps } from "next/app";
 
-function MyApp({ Component, pageProps }: AppProps) {
-  return (
-    <ClerkProvider {...pageProps}>
-      <MultisessionAppSupport>
-        <Component {...pageProps} />
-      </MultisessionAppSupport>
-    </ClerkProvider>
-  );
-}
+  function MyApp({ Component, pageProps }: AppProps) {
+    return (
+      <ClerkProvider {...pageProps}>
+        <MultisessionAppSupport>
+          <Component {...pageProps} />
+        </MultisessionAppSupport>
+      </ClerkProvider>
+    );
+  }
 
-export default MyApp;
-```
-</Tab>
+  export default MyApp;
+  ```
+  </Tab>
 
-<Tab>
-```tsx filename="app.tsx"
-import { ClerkProvider, MultisessionAppSupport } from "@clerk/clerk-react";
+  <Tab>
+  ```tsx filename="app.tsx"
+  import { ClerkProvider, MultisessionAppSupport } from "@clerk/clerk-react";
 
-function App() {
-  return (
-    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-      <MultisessionAppSupport>
-        <Page />
-      </MultisessionAppSupport>
-    </ClerkProvider>
-  );
-}
+  function App() {
+    return (
+      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+        <MultisessionAppSupport>
+          <Page />
+        </MultisessionAppSupport>
+      </ClerkProvider>
+    );
+  }
 
-function Page() {
-  return (
-    <div>The content</div>
-  );
-}
+  function Page() {
+    return (
+      <div>The content</div>
+    );
+  }
 
-```
-</Tab>
+  ```
+  </Tab>
 </Tabs>
