--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -44,7 +44,7 @@ The `@clerk/localizations` package contains predefined localizations for the Cle
 
 To get started, install the `@clerk/localizations` package.
 
-<CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
   npm install @clerk/localizations
   ```
@@ -120,7 +120,7 @@ To find the key for your translation (like the `socialButtonsBlockButton` from t
 
 For example, if you want to change the 'to continue to' string from the `<SignIn />` and `<SignUp />` components, you would search for 'to continue to'. You will find several instances of this. Some of those are in the the following `signUp` object:
 
-```json
+```js
 signUp: {
     start: {
       title: 'Create your account',
