--- a/docs/components/customization/themes.mdx
+++ b/docs/components/customization/themes.mdx
@@ -16,7 +16,7 @@ Clerk currently offers four pre-built themes that can be exported from `@clerk/t
 
 To get started, install the `@clerk/themes` package.
 
-<CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
   npm install @clerk/themes
   ```
