--- a/docs/components/customization/variables.mdx
+++ b/docs/components/customization/variables.mdx
@@ -17,338 +17,318 @@ To customize all Clerk components, pass the `variables` property to the `appeara
 
 In the example below, the primary color is set to red and the text color is set to white. Because these styles are applied to the `<ClerkProvider />`, which wraps the entire application, these styles will be applied to all Clerk components that use the primary color and text color.
 
-<CodeBlockTabs options={["Next.js App Router", "Next.js Pages Router", "React", "Remix"]}>
-```tsx filename="/src/app/layout.tsx" {10-15}
-import { ClerkProvider } from '@clerk/nextjs';
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
+  <Tab>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+    ```tsx filename="/src/app/layout.tsx" {10-15}
+    import { ClerkProvider } from '@clerk/nextjs';
 
-export default function RootLayout({
-  children,
-}: {
-  children: React.ReactNode
-}) {
-  return (
-    <ClerkProvider
-      appearance={{
-        variables: {
-          colorPrimary: "red",
-          colorText: "white"
-        }
-      }}
-    >
-      <html lang="en">
-        <body>{children}</body>
-      </html>
-    </ClerkProvider>
-  )
-}
-```
-
-```tsx filename="_app.tsx" {7-12}
-import { ClerkProvider } from '@clerk/nextjs';
-import type { AppProps } from "next/app";
-
-function MyApp({ Component, pageProps }: AppProps) {
-  return (
-    <ClerkProvider
-      appearance={{
-        variables: {
-          colorPrimary: "red",
-          colorText: "white"
-        }
-      }}
-    >
-      <Component {...pageProps}/>
-    </ClerkProvider>
-  )
-}
-
-export default MyApp;
-```
-
-```tsx filename="app.tsx" {13-18}
-import React from "react";
-import "./App.css";
-import { ClerkProvider } from "@clerk/clerk-react";
-
-if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw new Error("Missing Publishable Key")
-}
-const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-
-function App() {
-  return (
-    <ClerkProvider 
-      appearance={{
-        variables: {
-          colorPrimary: "red",
-          colorText: "white"
-        }
-      }} 
-      publishableKey={clerkPubKey}
-    >
-      <div>Hello from clerk</div>
-    </ClerkProvider>
-  );
-}
-
-export default App;
-```
-
-```tsx filename="app/root.tsx" {42-47}
-// Import ClerkApp
-import { ClerkApp } from "@clerk/remix";
-import type { MetaFunction,LoaderFunction } from "@remix-run/node";
-
-import {
-  Links,
-  LiveReload,
-  Meta,
-  Outlet,
-  Scripts,
-  ScrollRestoration,
-} from "@remix-run/react";
-
-import { rootAuthLoader } from "@clerk/remix/ssr.server";
-
-export const meta: MetaFunction = () => ({
-  charset: "utf-8",
-  title: "New Remix App",
-  viewport: "width=device-width,initial-scale=1",
-});
-
-export const loader: LoaderFunction = (args) => rootAuthLoader(args);
-
-function App() {
-  return (
-    <html lang="en">
-      <head>
-        <Meta />
-        <Links />
-      </head>
-      <body>
-        <Outlet />
-        <ScrollRestoration />
-        <Scripts />
-        <LiveReload />
-      </body>
-    </html>
-  );
-}
-
-export default ClerkApp(App, {
-  appearance: {
-    variables: {
-      colorPrimary: "red",
-      colorText: "white"
+    export default function RootLayout({
+      children,
+    }: {
+      children: React.ReactNode
+    }) {
+      return (
+        <ClerkProvider
+          appearance={{
+            variables: {
+              colorPrimary: "red",
+              colorText: "white"
+            }
+          }}
+        >
+          <html lang="en">
+            <body>{children}</body>
+          </html>
+        </ClerkProvider>
+      )
     }
-  },
-});
-```
-</CodeBlockTabs>
+    ```
+
+    ```tsx filename="_app.tsx" {7-12}
+    import { ClerkProvider } from '@clerk/nextjs';
+    import type { AppProps } from "next/app";
+
+    function MyApp({ Component, pageProps }: AppProps) {
+      return (
+        <ClerkProvider
+          appearance={{
+            variables: {
+              colorPrimary: "red",
+              colorText: "white"
+            }
+          }}
+        >
+          <Component {...pageProps}/>
+        </ClerkProvider>
+      )
+    }
+
+    export default MyApp;
+    ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app.tsx" {13-18}
+  import React from "react";
+  import "./App.css";
+  import { ClerkProvider } from "@clerk/clerk-react";
+
+  if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
+    throw new Error("Missing Publishable Key")
+  }
+  const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
+
+  function App() {
+    return (
+      <ClerkProvider 
+        appearance={{
+          variables: {
+            colorPrimary: "red",
+            colorText: "white"
+          }
+        }} 
+        publishableKey={clerkPubKey}
+      >
+        <div>Hello from clerk</div>
+      </ClerkProvider>
+    );
+  }
+
+  export default App;
+  ```
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app/root.tsx" {42-47}
+  // Import ClerkApp
+  import { ClerkApp } from "@clerk/remix";
+  import type { MetaFunction,LoaderFunction } from "@remix-run/node";
+
+  import {
+    Links,
+    LiveReload,
+    Meta,
+    Outlet,
+    Scripts,
+    ScrollRestoration,
+  } from "@remix-run/react";
+
+  import { rootAuthLoader } from "@clerk/remix/ssr.server";
+
+  export const meta: MetaFunction = () => ({
+    charset: "utf-8",
+    title: "New Remix App",
+    viewport: "width=device-width,initial-scale=1",
+  });
+
+  export const loader: LoaderFunction = (args) => rootAuthLoader(args);
+
+  function App() {
+    return (
+      <html lang="en">
+        <head>
+          <Meta />
+          <Links />
+        </head>
+        <body>
+          <Outlet />
+          <ScrollRestoration />
+          <Scripts />
+          <LiveReload />
+        </body>
+      </html>
+    );
+  }
+
+  export default ClerkApp(App, {
+    appearance: {
+      variables: {
+        colorPrimary: "red",
+        colorText: "white"
+      }
+    },
+  });
+  ```
+  </Tab>
+</Tabs>
 
 You can customize all instances of a Clerk component by passing the component to the `appearance` prop of the `<ClerkProvider />`. The `appearance` prop accepts the name of the Clerk component you want to style as a key. 
 
 In the example below, the primary color is set to red and the text color is set to white for all instances of the [`<SignIn />`](/docs/components/authentication/sign-in) component. 
 
-<CodeBlockTabs options={['Next.js App Router', 'Next.js Pages Router', 'React', 'Remix']}>
-```tsx filename="/src/app/layout.tsx" {10-17}
-import { ClerkProvider } from '@clerk/nextjs';
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
+  <Tab>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+    ```tsx filename="/src/app/layout.tsx" {10-17}
+    import { ClerkProvider } from '@clerk/nextjs';
 
-export default function RootLayout({
-  children,
-}: {
-  children: React.ReactNode
-}) {
-  return (
-    <ClerkProvider
-      appearance={{
-        signIn: { 
-          variables: {
-            colorPrimary: "red",
-            colorText: "white"
-          } 
-        },
-      }}
-    >
+    export default function RootLayout({
+      children,
+    }: {
+      children: React.ReactNode
+    }) {
+      return (
+        <ClerkProvider
+          appearance={{
+            signIn: { 
+              variables: {
+                colorPrimary: "red",
+                colorText: "white"
+              } 
+            },
+          }}
+        >
+          <html lang="en">
+            <body>{children}</body>
+          </html>
+        </ClerkProvider>
+      )
+    }
+    ```
+
+    ```tsx filename="_app.tsx" {7-14}
+    import { ClerkProvider } from "@clerk/nextjs";
+    import type { AppProps } from "next/app";
+
+    function MyApp({ Component, pageProps }: AppProps) {
+      return (
+        <ClerkProvider
+          appearance={{
+            signIn: { 
+              variables: {
+                colorPrimary: "red",
+                colorText: "white"
+              } 
+            },
+          }}
+        >
+          <Component {...pageProps} />
+        </ClerkProvider>
+      );
+    }
+
+    export default MyApp;
+    ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app.tsx" {13-20}
+  import React from "react";
+  import "./App.css";
+  import { ClerkProvider } from "@clerk/clerk-react";
+
+  if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
+    throw new Error("Missing Publishable Key")
+  }
+  const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
+
+  function App() {
+    return (
+      <ClerkProvider 
+        appearance={{
+          signIn: { 
+            variables: {
+              colorPrimary: "red",
+              colorText: "white"
+            } 
+          },
+        }}
+        publishableKey={clerkPubKey}
+      >
+        <div>Hello from clerk</div>
+      </ClerkProvider>
+    );
+  }
+
+  export default App;
+  ```
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app/root.tsx" {42-49}
+  // Import ClerkApp
+  import { ClerkApp } from "@clerk/remix";
+  import type { MetaFunction,LoaderFunction } from "@remix-run/node";
+
+  import {
+    Links,
+    LiveReload,
+    Meta,
+    Outlet,
+    Scripts,
+    ScrollRestoration,
+  } from "@remix-run/react";
+
+  import { rootAuthLoader } from "@clerk/remix/ssr.server";
+
+  export const meta: MetaFunction = () => ({
+    charset: "utf-8",
+    title: "New Remix App",
+    viewport: "width=device-width,initial-scale=1",
+  });
+
+  export const loader: LoaderFunction = (args) => rootAuthLoader(args);
+
+  function App() {
+    return (
       <html lang="en">
-        <body>{children}</body>
+        <head>
+          <Meta />
+          <Links />
+        </head>
+        <body>
+          <Outlet />
+          <ScrollRestoration />
+          <Scripts />
+          <LiveReload />
+        </body>
       </html>
-    </ClerkProvider>
-  )
-}
-```
+    );
+  }
 
-```tsx filename="_app.tsx" {7-14}
-import { ClerkProvider } from "@clerk/nextjs";
-import type { AppProps } from "next/app";
-
-function MyApp({ Component, pageProps }: AppProps) {
-  return (
-    <ClerkProvider
-      appearance={{
-        signIn: { 
-          variables: {
-            colorPrimary: "red",
-            colorText: "white"
-          } 
-        },
-      }}
-    >
-      <Component {...pageProps} />
-    </ClerkProvider>
-  );
-}
-
-export default MyApp;
-
-```
-
-```tsx filename="app.tsx" {13-20}
-import React from "react";
-import "./App.css";
-import { ClerkProvider } from "@clerk/clerk-react";
-
-if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw new Error("Missing Publishable Key")
-}
-const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-
-function App() {
-  return (
-    <ClerkProvider 
-      appearance={{
-        signIn: { 
-          variables: {
-            colorPrimary: "red",
-            colorText: "white"
-          } 
-        },
-      }}
-      publishableKey={clerkPubKey}
-    >
-      <div>Hello from clerk</div>
-    </ClerkProvider>
-  );
-}
-
-export default App;
-```
-
-```tsx filename="app/root.tsx" {42-49}
-// Import ClerkApp
-import { ClerkApp } from "@clerk/remix";
-import type { MetaFunction,LoaderFunction } from "@remix-run/node";
-
-import {
-  Links,
-  LiveReload,
-  Meta,
-  Outlet,
-  Scripts,
-  ScrollRestoration,
-} from "@remix-run/react";
-
-import { rootAuthLoader } from "@clerk/remix/ssr.server";
-
-export const meta: MetaFunction = () => ({
-  charset: "utf-8",
-  title: "New Remix App",
-  viewport: "width=device-width,initial-scale=1",
-});
-
-export const loader: LoaderFunction = (args) => rootAuthLoader(args);
-
-function App() {
-  return (
-    <html lang="en">
-      <head>
-        <Meta />
-        <Links />
-      </head>
-      <body>
-        <Outlet />
-        <ScrollRestoration />
-        <Scripts />
-        <LiveReload />
-      </body>
-    </html>
-  );
-}
-
-export default ClerkApp(App, {
-  appearance: {
-    signIn: { 
-      variables: {
-        colorPrimary: "red",
-        colorText: "white"
-      } 
+  export default ClerkApp(App, {
+    appearance: {
+      signIn: { 
+        variables: {
+          colorPrimary: "red",
+          colorText: "white"
+        } 
+      },
     },
-  },
-});
-```
-</CodeBlockTabs>
+  });
+  ```
+  </Tab>
+</Tabs>
 
 ### Pass `variables` to a single component
 
 To customize a single Clerk component, pass the `variables` property to the `appearance` prop to the Clerk component.
 
-<CodeBlockTabs options={['Next.js App Router', 'Next.js Pages Router', 'React', 'Remix']}>
-```tsx filename="/app/sign-in/[[...sign-in]]/page.tsx" {5-10}
-import { SignIn } from "@clerk/nextjs";
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
+  <Tab>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+    ```tsx filename="/app/sign-in/[[...sign-in]]/page.tsx" {5-10}
+    import { SignIn } from "@clerk/nextjs";
 
-export default function Page() {
-  return <SignIn 
-    appearance={{
-      variables: {
-        colorPrimary: "red",
-        colorText: "white"
-      }
-    }}
-  />;
-}
-```
+    export default function Page() {
+      return <SignIn 
+        appearance={{
+          variables: {
+            colorPrimary: "red",
+            colorText: "white"
+          }
+        }}
+      />;
+    }
+    ```
 
-```tsx filename="/pages/sign-in/[[...index]].tsx" {5-10}
-import { SignIn } from "@clerk/nextjs";
- 
-const SignInPage = () => (
-  <SignIn 
-    appearance={{
-      variables: {
-        colorPrimary: "red",
-        colorText: "white"
-      }
-    }}
-  />
-);
-
-export default SignInPage;
-```
-
-```tsx filename="/src/sign-in/[[...index]].tsx" {5-10}
-import { SignIn } from "@clerk/clerk-react";
-
-const SignInPage = () => (
-  <SignIn 
-    appearance={{
-      variables: {
-        colorPrimary: "red",
-        colorText: "white"
-      }
-    }}
-  />
-);
-
-export default SignInPage;
-```
-
-```tsx filename="app/routes/sign-in/$.tsx" {8-13}
-import { SignIn } from "@clerk/remix";
- 
-export default function SignInPage() {
-  return (
-    <div style={{ border: "2px solid blue", padding: "2rem" }}>
-      <h1>Sign In route</h1>
+    ```tsx filename="/pages/sign-in/[[...index]].tsx" {5-10}
+    import { SignIn } from "@clerk/nextjs";
+    
+    const SignInPage = () => (
       <SignIn 
         appearance={{
           variables: {
@@ -356,14 +336,57 @@ export default function SignInPage() {
             colorText: "white"
           }
         }}
-        routing={"path"} 
-        path={"/sign-in"} 
       />
-    </div>
+    );
+
+    export default SignInPage;
+    ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+  ```tsx filename="/src/sign-in/[[...index]].tsx" {5-10}
+  import { SignIn } from "@clerk/clerk-react";
+
+  const SignInPage = () => (
+    <SignIn 
+      appearance={{
+        variables: {
+          colorPrimary: "red",
+          colorText: "white"
+        }
+      }}
+    />
   );
-}
-```
-</CodeBlockTabs>
+
+  export default SignInPage;
+  ```
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app/routes/sign-in/$.tsx" {8-13}
+  import { SignIn } from "@clerk/remix";
+  
+  export default function SignInPage() {
+    return (
+      <div style={{ border: "2px solid blue", padding: "2rem" }}>
+        <h1>Sign In route</h1>
+        <SignIn 
+          appearance={{
+            variables: {
+              colorPrimary: "red",
+              colorText: "white"
+            }
+          }}
+          routing={"path"} 
+          path={"/sign-in"} 
+        />
+      </div>
+    );
+  }
+  ```
+  </Tab>
+</Tabs>
 
 ## Properties
 
