--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -16,9 +16,9 @@ The `<CreateOrganization />` component is used to render an organization creatio
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix']}>
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
-    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
       ```jsx filename="/app/create-organization/[[...create-organization]]/page.[jsx/tsx]"
       import { CreateOrganization } from "@clerk/nextjs";
 
