--- a/docs/components/organization/organization-list.mdx
+++ b/docs/components/organization/organization-list.mdx
@@ -16,63 +16,71 @@ The `<OrganizationList />` component is used to display organization related mem
 
 ## Usage
 
-<CodeBlockTabs options={["Next.js App Router", "Next.js Pages Router", "React", "Remix"]}>
-```jsx copy filename="/app/discover/page.[jsx/tsx]"
-import { OrganizationList } from "@clerk/nextjs";
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
+  <Tab>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+    ```jsx copy filename="/app/discover/page.[jsx/tsx]"
+    import { OrganizationList } from "@clerk/nextjs";
 
-export default function OrganizationListPage() {
-  return (
-      <OrganizationList
-          afterCreateOrganizationUrl='/organization/:slug'
-          afterSelectPersonalUrl='/user/:id'
-          afterSelectOrganizationUrl='/organization/:slug'
-      />
-  );
-}
-```
+    export default function OrganizationListPage() {
+      return (
+          <OrganizationList
+              afterCreateOrganizationUrl='/organization/:slug'
+              afterSelectPersonalUrl='/user/:id'
+              afterSelectOrganizationUrl='/organization/:slug'
+          />
+      );
+    }
+    ```
 
-```jsx copy filename="/pages/discover.[jsx/tsx]"
-import { OrganizationList } from "@clerk/nextjs";
+    ```jsx copy filename="/pages/discover.[jsx/tsx]"
+    import { OrganizationList } from "@clerk/nextjs";
 
-export default function OrganizationListPage() {
-  return (
-      <OrganizationList
-          afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
-          afterSelectPersonalUrl={user => `/user/${user.id}`}
-          afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
-      />
-  );
-}
-```
+    export default function OrganizationListPage() {
+      return (
+          <OrganizationList
+              afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
+              afterSelectPersonalUrl={user => `/user/${user.id}`}
+              afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
+          />
+      );
+    }
+    ```
+    </CodeBlockTabs>
+  </Tab>
 
-```jsx copy filename="discover.tsx"
-import { OrganizationList } from "@clerk/clerk-react";
+  <Tab>
+  ```jsx copy filename="discover.tsx"
+  import { OrganizationList } from "@clerk/clerk-react";
 
-export default function OrganizationListPage() {
-  return (
-      <OrganizationList
-          afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
-          afterSelectPersonalUrl={user => `/user/${user.id}`}
-          afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
-      />
-  );
-}
-```
+  export default function OrganizationListPage() {
+    return (
+        <OrganizationList
+            afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
+            afterSelectPersonalUrl={user => `/user/${user.id}`}
+            afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
+        />
+    );
+  }
+  ```
+  </Tab>
 
-```jsx copy filename="/route/discover.tsx"
-import { OrganizationList } from "@clerk/remix";
+  <Tab>
+  ```jsx copy filename="/route/discover.tsx"
+  import { OrganizationList } from "@clerk/remix";
 
-export default function OrganizationListPage() {
-  return (
-      <OrganizationList
-          afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
-          afterSelectPersonalUrl={user => `/user/${user.id}`}
-          afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
-      />
-  );
-}
-```
-</CodeBlockTabs>
+  export default function OrganizationListPage() {
+    return (
+        <OrganizationList
+            afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
+            afterSelectPersonalUrl={user => `/user/${user.id}`}
+            afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
+        />
+    );
+  }
+  ```
+  </Tab>
+</Tabs>
 
 ### Force Organizations
 
