--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -16,9 +16,9 @@ The [`<OrganizationSwitcher />`][orgswitcher-ref] component is used to enable th
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix']}>
+<Tabs items={["Next.js", "React", "Remix"]}>
   <Tab>
-    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
       ```jsx filename="/app/organization-switcher/[[...organization-switcher]]/page.[jsx/tsx]"
       import { OrganizationSwitcher } from "@clerk/nextjs";
 
