--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -17,7 +17,7 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
 ## Usage
 
 
-<Tabs items={['Next.js', 'React', 'Remix']}>
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
     You can embed the `<UserProfile />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application.
 
