--- a/docs/custom-flows/embedded-magic-links.mdx
+++ b/docs/custom-flows/embedded-magic-links.mdx
@@ -40,24 +40,7 @@ Now that you have a way to process a token, you'll need to setup a page on your 
 
 Signing a user in with a token is very similar to all of our other custom flows.
 
-<CodeBlockTabs options={["React", "Next.js"]}>
-```jsx filename="accept-token.js"
-// Grab the sign in token from the query string
-const queryParams = new URLSearchParams(window.location.search);
-const signInToken = queryParams.get('token');
-
-const { signIn, setSession } = useSignIn();
-
-// Create a sign in with the ticket strategy, and the sign-in-token
-const res = await signIn.create({
-  strategy: "ticket",
-  ticket: "signInToken",
-});
-
-// Set the session as active, and then do whatever you need to!
-setSession(res.createdSessionId, () => console.log("SignedIn!"));
-```
-
+<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
 ```jsx filename="pages/accept-token.jsx"
 import { InferGetServerSidePropsType, GetServerSideProps } from "next";
 import { useUser, useSignIn } from "@clerk/nextjs";
@@ -117,5 +100,22 @@ const AcceptToken = ({
 };
 
 export default AcceptToken;
+```
+
+```jsx filename="accept-token.js"
+// Grab the sign in token from the query string
+const queryParams = new URLSearchParams(window.location.search);
+const signInToken = queryParams.get('token');
+
+const { signIn, setSession } = useSignIn();
+
+// Create a sign in with the ticket strategy, and the sign-in-token
+const res = await signIn.create({
+  strategy: "ticket",
+  ticket: "signInToken",
+});
+
+// Set the session as active, and then do whatever you need to!
+setSession(res.createdSessionId, () => console.log("SignedIn!"));
 ```
 </CodeBlockTabs>
