--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -11,7 +11,7 @@ When using the [`signUp()`](/docs/references/react/use-sign-up) or [`signIn()`](
 
 A user is attempting to sign up with your application, but they are attempting to use a password that has been found in an online data breach. This will return a 422 error code with the message: "Password has been found in an online data breach. For account safety, please use a different password."
 
-<CodeBlockTabs options={["React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useState } from "react";
 import { useSignUp } from "@clerk/clerk-react";
@@ -57,7 +57,7 @@ const signUp = await client.signUp.create({
 
 Errors returned from the [`signIn()`](/docs/references/react/use-sign-in) function are handled in a similar way:
 
-<CodeBlockTabs options={["React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useState } from "react";
 import { useSignIn } from "@clerk/clerk-react";
