--- a/docs/custom-flows/forgot-password.mdx
+++ b/docs/custom-flows/forgot-password.mdx
@@ -11,7 +11,7 @@ If these options will not work for you, or if you want more control of your user
 
 ## Example
 
-<CodeBlockTabs options={["React"]}>
+<CodeBlockTabs type="framework" options={["React"]}>
 ```jsx
 import React, { SyntheticEvent, useState } from 'react';
 import { useSignIn } from '@clerk/nextjs';
