--- a/docs/custom-flows/magic-links.mdx
+++ b/docs/custom-flows/magic-links.mdx
@@ -104,7 +104,7 @@ Let's see all the steps involved in more detail.
 
 Clerk provides a highly flexible API that allows you to hook into any of the above steps while abstracting away all the complexities of a magic link-based sign-up flow.
 
-<CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["Next.js", "React", "JavaScript"]}>
 ```jsx
 import React from "react";
 import { useRouter } from "next/router";
@@ -503,7 +503,7 @@ Let's see all the steps involved in more detail.
 
 Clerk provides a highly flexible API that allows you to hook into any of the above steps, while abstracting away all the complexities of a magic link based sign-in flow.
 
-<CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["Next.js", "React", "JavaScript"]}>
 ```jsx
 import React from "react";
 import { useRouter } from "next/router";
@@ -897,7 +897,7 @@ Magic links can also provide a nice user experience for verifying email addresse
 
 Clerk provides a highly flexible API that allows you to hook into any of the above steps while abstracting away all the complexities of a magic link-based email address verification.
 
-<CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["Next.js", "React", "JavaScript"]}>
 ```jsx
 import React from "react";
 import { useUser, useMagicLink } from "@clerk/nextjs";
