--- a/docs/custom-flows/mfa.mdx
+++ b/docs/custom-flows/mfa.mdx
@@ -61,7 +61,7 @@ Signing in to an MFA-enabled account is identical to the regular sign-in process
 
 Let's see the above in action.
 
-<CodeBlockTabs options={["React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useSignIn } from "@clerk/clerk-react";
 
