--- a/docs/custom-flows/multi-session-applications.mdx
+++ b/docs/custom-flows/multi-session-applications.mdx
@@ -50,7 +50,7 @@ The easiest way to add multi-session features to your application is by using th
 
 This component has buttons add a new account, switch between accounts, and sign out from one or all accounts.
 
-<CodeBlockTabs options={["React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { UserButton } from "@clerk/clerk-react";
 
@@ -89,7 +89,7 @@ In case the pre-built user button doesn't cover your needs and you prefer a cust
 
 ### Active session/user
 
-<CodeBlockTabs options={["React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useClerk } from "@clerk/clerk-react";
 
@@ -108,7 +108,7 @@ const activeUser = window.Clerk.user;
 
 ### Switching between sessions
 
-<CodeBlockTabs options={["React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useClerk } from "@clerk/clerk-react";
 
@@ -144,7 +144,7 @@ For more information on how Clerk's sign-in flow works, check out the [detailed 
 
 This version of sign out will deactivate the active session. The rest of the available sessions will remain intact.
 
-<CodeBlockTabs options={["React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useClerk } from "@clerk/clerk-react";
 
@@ -164,7 +164,7 @@ await window.Clerk.signOutOne();
 
 This request will deactivate all sessions on the current client.
 
-<CodeBlockTabs options={["React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useClerk } from "@clerk/clerk-react";
 
