--- a/docs/custom-flows/saml-connections.mdx
+++ b/docs/custom-flows/saml-connections.mdx
@@ -18,7 +18,7 @@ When using SAML, the sign-in and sign-up are equivalent. A successful SAML flow 
 
 The React example below uses `react-router-dom` to define the required route. For NextJS apps, you only need to create a `pages/sso-callback` file.
 
-<CodeBlockTabs options={["React"]}>
+<CodeBlockTabs type="framework" options={["React"]}>
 ```jsx
 import React from "react";
 import {
@@ -119,7 +119,7 @@ When a user initiates a SAML SSO verification during sign-in, or sign-up, it may
 
 For example, if someone already has an account, and tries to go through the sign up flow with the same SAML account, they can’t perform a successful sign up again. Or, if someone attempts to sign in with their SAML credentials but does not yet have an account, they won’t be signed in to the account. For these scenarios, we have “account transfers.”
 
-<CodeBlockTabs options={["JavaScript"]}>
+<CodeBlockTabs type="framework" options={["JavaScript"]}>
 ```js
 // Get sign-in and sign-up objects in the SAML callback page
 const { signIn, signUp } = window.Clerk.client;
