--- a/docs/custom-flows/sign-out.mdx
+++ b/docs/custom-flows/sign-out.mdx
@@ -36,7 +36,7 @@ In an application with [multisession](/docs/custom-flows/multi-session-applicati
   alt="The User Button component with multiple accounts signed in."
 />
 
-<CodeBlockTabs options={["React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { UserButton } from "@clerk/clerk-react";
 
@@ -78,7 +78,7 @@ If the pre-built [`<UserButton />`][user-button] doesn't cover your needs, you c
 
 In this example, the [`useClerk()`](/docs/references/react/use-clerk) hook is used to access the [`signOut()`](https://clerk.com/docs/references/javascript/clerk/clerk#sign-out) function. We then use the [`useRouter()`](https://nextjs.org/docs/pages/api-reference/functions/use-router) hook from Next.js to redirect the user to the home page (`/`) after they sign out.
 
-<CodeBlockTabs options={["React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useClerk } from "@clerk/clerk-react";
 import { useRouter } from 'next/navigation'
