--- a/docs/custom-flows/user-impersonation.mdx
+++ b/docs/custom-flows/user-impersonation.mdx
@@ -102,7 +102,7 @@ The above JSON snippet shows what a Clerk session token looks like when a user i
 
 When working with frontend (client-side) code, you can easily detect impersonated sessions and gain access to the actor ID or other information from the `act` claim.
 
-<CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["Next.js", "React", "JavaScript"]}>
 ```jsx
 import { useAuth } from "@clerk/nextjs";
 import { withServerSideAuth } from "@clerk/nextjs";
@@ -180,7 +180,7 @@ if (session.actor) {
 
 When working with backend code, Clerk provides middleware that can be used in Next.js API routes or directly in express-like Node.js applications. The middleware will provide information about impersonated sessions and the actor ID.
 
-<CodeBlockTabs options={["Next.js", "Node"]}>
+<CodeBlockTabs type="framework" options={["Next.js", "Node"]}>
 ```jsx
 // pages/api/some-handler.js
 import { withAuth } from "@clerk/nextjs";
