--- a/docs/organizations/creating-organizations.mdx
+++ b/docs/organizations/creating-organizations.mdx
@@ -17,9 +17,9 @@ When creating an organization, you can specify an optional slug for the new orga
 
 ## Usage
 
-{/* TO-DO (DOCS-316): Update and validate these code examples. */}
+{/* TODO (DOCS-316): Update and validate these code examples. */}
 
-<CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["Next.js", "React", "JavaScript"]}>
 ```jsx 
 // Form to create a new organization. The current user
 // will become the organization administrator.
