--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -17,7 +17,7 @@ Methods for [changing a member's role](/docs/references/backend/organization/upd
 
 {/* TODO (DOCS-316): Update and validate these examples. */}
 
-<CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["Next.js", "React", "JavaScript"]}>
 ```tsx filename="pages/organizations/[id].ts"
 import { useState, useEffect } from "react";
 import { useOrganization } from "@clerk/nextjs";
@@ -506,6 +506,6 @@ function InviteMember(){
 ```
 </CodeBlockTabs>
 
-{/* TO-DO: Should we mention the update method on the OrganizationMembership object? Or the updateMember method on the Organization object? Or the updateOrganizationMembership method from the Backend API? */}
+{/* TODO: Should we mention the update method on the OrganizationMembership object? Or the updateMember method on the Organization object? Or the updateOrganizationMembership method from the Backend API? */}
 
-{/* TO-DO: ## Remove members plus examples? */}
+{/* TODO: ## Remove members plus examples? */}
