--- a/docs/organizations/updating-organizations.mdx
+++ b/docs/organizations/updating-organizations.mdx
@@ -15,9 +15,9 @@ You can also use the `updateOrganization` method, which can be accessed from the
 
 This example uses the [`useOrganization()`](/docs/references/react/use-organization) hook to update the organization name.
 
-{/* TO-DO (DOCS-316): Update and validate these code examples. */}
+{/* TODO (DOCS-316): Update and validate these code examples. */}
 
-<CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["Next.js", "React", "JavaScript"]}>
 ```jsx
 import { useState, useEffect } from 'react';
 import { useRouter } from 'next/router';
