--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -17,7 +17,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 Once you have an Expo application ready, you need to install Clerk's Expo SDK.
 
-<CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
   npm install @clerk/clerk-expo
   ```
@@ -462,7 +462,7 @@ You can use it as your client JWT storage by setting the `tokenCache` prop in yo
 
 #### Install expo-secure-store
 
-<CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
   npm install expo-secure-store
   ```
