--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -20,7 +20,7 @@ To use the ClerkJS package, you have two options:
 
 At the root of your project, install the ClerkJS package using your package manager of choice:
 
-<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
   npm install @clerk/clerk-js
   ```
@@ -125,7 +125,7 @@ This example uses [the `<UserButton />` component](/docs/references/javascript/c
 
 <InjectKeys>
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {14}
   import Clerk from '@clerk/clerk-js';
 
