--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -30,23 +30,7 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 Clerk's Next.js SDK gives you access to prebuilt [components](/docs/components/overview), [hooks](/docs/references/nextjs/overview#client-side-helpers), and [helpers](/docs/references/nextjs/overview) for Next.js Server Components, Route Handlers and Middleware. Install it by running the following command in your terminal:
 
 
-<CodeBlockTabs type="installer" options={['npm', 'yarn', 'pnpm']}>
-  ```bash filename="terminal"
-  npm install @clerk/nextjs
-  ```
-
-  ```bash filename="terminal"
-  yarn add @clerk/nextjs
-  ```
-
-  ```bash filename="terminal"
-  pnpm add @clerk/nextjs
-  ```
-</CodeBlockTabs>
-
-### TEST
-
-<CodeBlockTabs type="installer" options={['npm', 'yarn', 'pnpm']}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
   npm install @clerk/nextjs
   ```
@@ -85,7 +69,6 @@ The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides ac
 
 <Tabs type="router" items={["App Router", "Pages Router"]}>
   <Tab>
-    
     <Callout>
       The `app/layout.tsx` file might be in your `src` folder if it isn't in your root folder.
     </Callout>
@@ -174,83 +157,6 @@ export default function Home() {
       <UserButton afterSignOutUrl="/"/>
     </div>
   )
-}
-```
-
-```tsx filename="pages/index.tsx" {1,7}
-import { UserButton } from "@clerk/nextjs";
-
-export default function Home() {
-  return (
-    <>
-			<header>
-				<UserButton afterSignOutUrl="/"/>
-			</header>
-			<div>Your page's content can go here.</div>
-    </>
-  );
-}
-```
-</CodeBlockTabs>
-
-### TEST
-
-<CodeBlockTabs type="framework" options={["React", "Remix"]}>
-```tsx filename="app/page.tsx" {1,6}
-import { UserButton } from "@clerk/nextjs";
-
-export default function Home() {
-  return (
-    <div>
-      <UserButton afterSignOutUrl="/"/>
-    </div>
-  )
-}
-```
-
-```tsx filename="pages/index.tsx" {1,7}
-import { UserButton } from "@clerk/nextjs";
-
-export default function Home() {
-  return (
-    <>
-			<header>
-				<UserButton afterSignOutUrl="/"/>
-			</header>
-			<div>Your page's content can go here.</div>
-    </>
-  );
-}
-```
-</CodeBlockTabs>
-
-### TEST
-
-<CodeBlockTabs type="framework" options={["React", "Remix", "Gatsby"]}>
-```tsx filename="app/page.tsx" {1,6}
-import { UserButton } from "@clerk/nextjs";
-
-export default function Home() {
-  return (
-    <div>
-      <UserButton afterSignOutUrl="/"/>
-    </div>
-  )
-}
-```
-
-```tsx filename="pages/index.tsx" {1,7}
-import { UserButton } from "@clerk/nextjs";
-
-export default function Home() {
-  return (
-    <>
-			<header>
-				<UserButton afterSignOutUrl="/"/>
-			</header>
-			<div>Your page's content can go here.</div>
-    </>
-  );
 }
 ```
 
