--- a/docs/references/javascript/overview.mdx
+++ b/docs/references/javascript/overview.mdx
@@ -17,7 +17,7 @@ There are two ways you can include ClerkJS in your project. You can either [impo
 
 ### Install ClerkJS as ES module
 
-<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
   npm install @clerk/clerk-js
   ```
