--- a/docs/references/nextjs/trpc.mdx
+++ b/docs/references/nextjs/trpc.mdx
@@ -19,7 +19,7 @@ Learn how to integrate Clerk into your Next.js application using [tRPC](https://
 
 Clerk's Next.js SDK gives you access to prebuilt components and hooks, as well as our [helpers](/docs/references/nextjs/overview) for Next.js API routes, server-side rendering, and middleware.
 
-<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
   npm install @clerk/nextjs
   ```
