--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -9,7 +9,7 @@ The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javasc
 
 ## Usage
 
-<Tabs items={['Next.js', 'React']}>
+<Tabs type="framework" items={["Next.js", "React"]}>
   <Tab>
     #### Check the current sign-in status
 
