--- a/docs/references/react/use-sign-up.mdx
+++ b/docs/references/react/use-sign-up.mdx
@@ -8,7 +8,7 @@ The `useSignUp()` hook gives you access to the [`SignUp`](/docs/references/javas
 
 ## Usage
 
-<Tabs items={['Next.js', 'React']}>
+<Tabs type="framework" items={["Next.js", "React"]}>
   <Tab>
     #### Check the current sign-up status
 
