--- a/docs/references/react/use-user.mdx
+++ b/docs/references/react/use-user.mdx
@@ -15,7 +15,7 @@ The `useUser()` hook is a convenient way to access the current user data where y
 
 ### Retrieve the current user data
 
-<CodeBlockTabs options={['Next.js', 'React']}>
+<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
 ```tsx filename="pages/index.tsx"
 import { useUser } from "@clerk/nextjs";
 
@@ -57,7 +57,7 @@ export default function Home() {
 
 ### Update the current user data
 
-<CodeBlockTabs options={['Next.js', 'React']}>
+<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
 ```tsx filename="app/page.tsx"
 import { useUser } from "@clerk/nextjs";
 
@@ -107,7 +107,7 @@ export default function Home() {
 
 If you need to retrieve the latest user data after updating the user elsewhere, use the `user.reload()` method.
 
-<CodeBlockTabs options={['Next.js', 'React']}>
+<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
 ```tsx filename="app/page.tsx"
 import { useUser } from "@clerk/nextjs";
 
