--- a/docs/users/deleting-users.mdx
+++ b/docs/users/deleting-users.mdx
@@ -9,61 +9,69 @@ Clerk currently supports deleting users through our [backend API](https://clerk.
 
 The [`deleteUser()`](/docs/references/backend/user/delete-user) method takes a single argument: the user ID of the user you want to delete. It can be accessed from the `users` sub-api of the `clerkClient` instance.
 
-<CodeBlockTabs options={["Curl", "Next.js App Router", "Next.js Pages Router", "Node"]}>
-```bash filename="curl.sh"
-curl -XDELETE -H 'Authorization: CLERK_SECRET_KEY' 'https://api.clerk.com/v1/users/{user_id}'
-```
+<Tabs type="framework" items={["Next.js", "Node", "cURL"]}>
+  <Tab>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+    ```ts filename="app/private/route.ts"
+    import { clerkClient } from "@clerk/nextjs";
+    import { NextResponse } from 'next/server';
 
-```ts filename="app/private/route.ts"
-import { clerkClient } from "@clerk/nextjs";
-import { NextResponse } from 'next/server';
+    export async function DELETE(request: Request) {
+      const { userId } = await request.body.json();
 
-export async function DELETE(request: Request) {
-  const { userId } = await request.body.json();
+      try {
+        await clerkClient.users.deleteUser(userId);
+        return NextResponse.json({ message: 'Success' });
+      }
+      catch (error) {
+        console.log(error);
+        return NextResponse.json({ error: 'Error deleting user' });
+      }
+    }
+    ```
 
-  try {
-    await clerkClient.users.deleteUser(userId);
-    return NextResponse.json({ message: 'Success' });
-  }
-  catch (error) {
-    console.log(error);
-    return NextResponse.json({ error: 'Error deleting user' });
-  }
-}
-```
+    ```ts filename="pages/api/private.ts"
+    import { clerkClient } from "@clerk/nextjs/server";
+    import { NextApiRequest, NextApiResponse } from "next";
 
-```ts filename="pages/api/private.ts"
-import { clerkClient } from "@clerk/nextjs/server";
-import { NextApiRequest, NextApiResponse } from "next";
+    export default async function handler(req: NextApiRequest, res: NextApiResponse) {
+      const userId = req.body.userId;
 
-export default async function handler(req: NextApiRequest, res: NextApiResponse) {
-  const userId = req.body.userId;
+      try {
+        await clerkClient.users.deleteUser(userId);
+        return res.status(200).json({ message: 'Success' });
+      }
+      catch (error) {
+        console.log(error);
+        return res.status(500).json({ error: 'Error deleting user' });
+      }
+    }
+    ```
+    </CodeBlockTabs>
+  </Tab>
 
-  try {
-    await clerkClient.users.deleteUser(userId);
-    return res.status(200).json({ message: 'Success' });
-  }
-  catch (error) {
-    console.log(error);
-    return res.status(500).json({ error: 'Error deleting user' });
-  }
-}
-```
+  <Tab>
+  ```ts filename="private.ts"
+  import { clerkClient } from "@clerk/clerk-sdk-node";
 
-```ts filename="private.ts"
-import { clerkClient } from "@clerk/clerk-sdk-node";
+  app.post('/deleteUser', (req, res) => {
+    const userId = req.body.userId;
 
-app.post('/deleteUser', (req, res) => {
-  const userId = req.body.userId;
+    try {
+      await clerkClient.users.deleteUser(userId);
+      return res.status(200).json({ message: 'Success' });
+    }
+    catch (error) {
+      console.log(error);
+      return res.status(500).json({ error: 'Error deleting user' });
+    }
+  });
+  ```
+  </Tab>
 
-  try {
-    await clerkClient.users.deleteUser(userId);
-    return res.status(200).json({ message: 'Success' });
-  }
-  catch (error) {
-    console.log(error);
-    return res.status(500).json({ error: 'Error deleting user' });
-  }
-});
-```
-</CodeBlockTabs>
+  <Tab>
+  ```bash filename="curl.sh"
+  curl -XDELETE -H 'Authorization: CLERK_SECRET_KEY' 'https://api.clerk.com/v1/users/{user_id}'
+  ```
+  </Tab>
+</Tabs>
