--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -40,7 +40,7 @@ Requests to `https://app.dev/__clerk/*` must be forwarded to `https://frontend-a
 
 #### Example Configuration
 
-<Tabs items={['Nginx', 'Cloudflare Workers']}>
+<Tabs items={["Nginx", "Cloudflare Workers"]}>
   <Tab>
     ```conf filename="nginx.conf"
     http {
@@ -118,7 +118,7 @@ In order to enable proxying, you need to set a proxy URL for your Clerk instance
   Make sure your proxy forwards requests to the Clerk Frontend API correctly and includes the required headers.
 </Callout>
 
-<Tabs items={['Dashboard', 'Backend API']}>
+<Tabs items={["Dashboard", "Backend API"]}>
   <Tab>
     1. In the Clerk Dashboard, go to the **[Domains](https://dashboard.clerk.com/last-active?path=domains)** page.
     2. Navigate to the **Frontend API** section.
@@ -142,10 +142,10 @@ In order to enable proxying, you need to set a proxy URL for your Clerk instance
 
 You can configure your proxy setup via environment variables or via properties.
 
-<Tabs items={['Environment Variables', 'Properties']}>
+<Tabs items={["Environment Variables", "Properties"]}>
   <Tab>
     <InjectKeys>
-      <CodeBlockTabs options={["Next.js", "Remix", 'Gatsby']}>
+      <CodeBlockTabs type="framework" options={["Next.js", "Remix", 'Gatsby']}>
         ```env filename=".env.local"
         NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
         CLERK_SECRET_KEY={{secret}}
@@ -173,7 +173,7 @@ You can configure your proxy setup via environment variables or via properties.
 
     This is an alternative configuration to the environment variable based setup that we described in the previous step.
 
-    <CodeBlockTabs options={['Next.js', 'Remix', 'JavaScript']}>
+    <CodeBlockTabs type="framework" options={["Next.js", "Remix", "JavaScript"]}>
       ```tsx filename="_app.tsx"
         import { ClerkProvider } from "@clerk/nextjs";
         import Head from "next/head";
