--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -18,11 +18,11 @@ The `<SignIn />` component renders a UI for signing in users. The functionality 
 
 Below is basic implementation of the `<SignIn />` component. You can use this as a starting point for your own implementation.
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby', 'JavaScript']}>
+<Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby", "JavaScript"]}>
   <Tab>
     You can embed the `<SignIn />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignIn />` component should be mounted on a public page.
 
-    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
       ```jsx filename="/app/sign-in/[[...sign-in]]/page.tsx"
       import { SignIn } from "@clerk/nextjs";
 
