--- a/docs/components/control/authenticate-with-callback.mdx
+++ b/docs/components/control/authenticate-with-callback.mdx
@@ -9,130 +9,128 @@ The `<AuthenticateWithRedirectCallback />` is used to complete a custom OAuth fl
 
 ## Usage
 
-<Tabs items={['Next.js', 'React']}>
+<Tabs type="framework" items={["Next.js", "React"]}>
+  <Tab>
+  This example below uses built in Next.js pages, but you could use any routing library you want.
 
-<Tab>
-This example below uses built in Next.js pages, but you could use any routing library you want.
+  ```tsx filename="app.tsx"
+  import '@/styles/globals.css';
+  import { ClerkProvider, SignedIn, SignedOut, useSignIn } from '@clerk/nextjs';
+  import { AppProps } from 'next/app';
+  import { useRouter } from 'next/router';
 
-```tsx filename="app.tsx"
-import '@/styles/globals.css';
-import { ClerkProvider, SignedIn, SignedOut, useSignIn } from '@clerk/nextjs';
-import { AppProps } from 'next/app';
-import { useRouter } from 'next/router';
+  const publicPages: Array<string> = [];
 
-const publicPages: Array<string> = [];
+  const SignInOAuthButtons = () => {
+    const { signIn, isLoaded } = useSignIn();
+    if (!isLoaded) {
+      return null;
+    }
+    const signInWithGoogle = () =>
+      signIn.authenticateWithRedirect({
+        strategy: 'oauth_google',
+        redirectUrl: '/sso-callback',
+        redirectUrlComplete: '/'
+      });
+    return <button onClick={signInWithGoogle}>Sign in with Google</button>;
+  };
+  function MyApp({ Component, pageProps }: AppProps) {
+    const { pathname } = useRouter();
+    const isPublicPage = publicPages.includes(pathname);
 
-const SignInOAuthButtons = () => {
-  const { signIn, isLoaded } = useSignIn();
-  if (!isLoaded) {
-    return null;
+    return (
+      <ClerkProvider {...pageProps}>
+        {isPublicPage ? (
+          <Component {...pageProps} />
+        ) : (
+          <>
+            <SignedIn>
+              <Component {...pageProps} />
+            </SignedIn>
+            <SignedOut>
+              <SignInOAuthButtons />
+            </SignedOut>
+          </>
+        )}
+      </ClerkProvider>
+    );
   }
-  const signInWithGoogle = () =>
-    signIn.authenticateWithRedirect({
-      strategy: 'oauth_google',
-      redirectUrl: '/sso-callback',
-      redirectUrlComplete: '/'
-    });
-  return <button onClick={signInWithGoogle}>Sign in with Google</button>;
-};
-function MyApp({ Component, pageProps }: AppProps) {
-  const { pathname } = useRouter();
-  const isPublicPage = publicPages.includes(pathname);
 
-  return (
-    <ClerkProvider {...pageProps}>
-      {isPublicPage ? (
-        <Component {...pageProps} />
-      ) : (
-        <>
-          <SignedIn>
-            <Component {...pageProps} />
-          </SignedIn>
-          <SignedOut>
-            <SignInOAuthButtons />
-          </SignedOut>
-        </>
-      )}
-    </ClerkProvider>
-  );
-}
+  export default MyApp;
+  ```
 
-export default MyApp;
-```
+  Once you have implemented your sign in flow, you can implement the callback page.
 
-Once you have implemented your sign in flow, you can implement the callback page.
+  ```tsx filename="/pages/sso-callback.tsx"
+  import { AuthenticateWithRedirectCallback } from '@clerk/nextjs';
 
-```tsx filename="/pages/sso-callback.tsx"
-import { AuthenticateWithRedirectCallback } from '@clerk/nextjs';
-
-export default function SSOCallBack() {
-  return <AuthenticateWithRedirectCallback />;
-}
-```
-
-</Tab>
-<Tab>
-
-This example below is using the `react-router-dom` library. You can use any routing library you want.
-
-```tsx filename="app.tsx"
-import {
-  ClerkProvider,
-  AuthenticateWithRedirectCallback,
-  SignedOut,
-  useSignIn,
-  SignedIn
-} from '@clerk/clerk-react';
-
-import { Route, Routes } from 'react-router-dom';
-
-function App() {
-  return (
-    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-      {/* Define a / route that displays the OAuth button */}
-      <Routes>
-        <Route path="/" element={<HomePages />} />
-
-        <Route
-          path="/sso-callback"
-          element={<AuthenticateWithRedirectCallback />}
-        />
-      </Routes>
-    </ClerkProvider>
-  );
-}
-
-function HomePages() {
-  return (
-    <>
-      <SignedOut>
-        <SignInOAuthButtons />
-      </SignedOut>
-      <SignedIn>
-        <div>Hello! You are Signed In!</div>
-      </SignedIn>
-    </>
-  );
-}
-
-function SignInOAuthButtons() {
-  const { signIn, isLoaded } = useSignIn();
-  if (!isLoaded) {
-    return null;
+  export default function SSOCallBack() {
+    return <AuthenticateWithRedirectCallback />;
   }
-  const signInWithGoogle = () =>
-    signIn.authenticateWithRedirect({
-      strategy: 'oauth_google',
-      redirectUrl: '/sso-callback',
-      redirectUrlComplete: '/'
-    });
-  return <button onClick={signInWithGoogle}>Sign in with Google</button>;
-}
+  ```
+  </Tab>
 
-export default App;
-```
+  <Tab>
+  This example below is using the `react-router-dom` library. You can use any routing library you want.
 
-</Tab>
+  ```tsx filename="app.tsx"
+  import {
+    ClerkProvider,
+    AuthenticateWithRedirectCallback,
+    SignedOut,
+    useSignIn,
+    SignedIn
+  } from '@clerk/clerk-react';
+
+  import { Route, Routes } from 'react-router-dom';
+
+  function App() {
+    return (
+      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+        {/* Define a / route that displays the OAuth button */}
+        <Routes>
+          <Route path="/" element={<HomePages />} />
+
+          <Route
+            path="/sso-callback"
+            element={<AuthenticateWithRedirectCallback />}
+          />
+        </Routes>
+      </ClerkProvider>
+    );
+  }
+
+  function HomePages() {
+    return (
+      <>
+        <SignedOut>
+          <SignInOAuthButtons />
+        </SignedOut>
+        <SignedIn>
+          <div>Hello! You are Signed In!</div>
+        </SignedIn>
+      </>
+    );
+  }
+
+  function SignInOAuthButtons() {
+    const { signIn, isLoaded } = useSignIn();
+    if (!isLoaded) {
+      return null;
+    }
+    const signInWithGoogle = () =>
+      signIn.authenticateWithRedirect({
+        strategy: 'oauth_google',
+        redirectUrl: '/sso-callback',
+        redirectUrlComplete: '/'
+      });
+    return <button onClick={signInWithGoogle}>Sign in with Google</button>;
+  }
+
+  export default App;
+  ```
+
+  </Tab>
 </Tabs>
 
 ## Properties
