--- a/docs/components/control/redirect-to-organizationprofile.mdx
+++ b/docs/components/control/redirect-to-organizationprofile.mdx
@@ -9,79 +9,79 @@ The `<RedirectToOrganizationProfile />` component will navigate to the organizat
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix']}>
-<Tab>
-```tsx filename="pages/_app.tsx"
-import {
-  ClerkProvider,
-  SignedIn,
-  SignedOut,
-  RedirectToOrganizationProfile,
-} from "@clerk/nextjs";
-import { AppProps } from "next/app";
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
+  <Tab>
+  ```tsx filename="pages/_app.tsx"
+  import {
+    ClerkProvider,
+    SignedIn,
+    SignedOut,
+    RedirectToOrganizationProfile,
+  } from "@clerk/nextjs";
+  import { AppProps } from "next/app";
 
 
-function MyApp({ Component, pageProps } : AppProps) {
-  return (
-    <ClerkProvider {...pageProps}>
-      <SignedIn>
-        <RedirectToOrganizationProfile/>
-      </SignedIn>
-      <SignedOut>
-        Please Sign In
-      </SignedOut>
-    </ClerkProvider>
-  );
-}
+  function MyApp({ Component, pageProps } : AppProps) {
+    return (
+      <ClerkProvider {...pageProps}>
+        <SignedIn>
+          <RedirectToOrganizationProfile/>
+        </SignedIn>
+        <SignedOut>
+          Please Sign In
+        </SignedOut>
+      </ClerkProvider>
+    );
+  }
 
-export default MyApp;
-```
-</Tab>
+  export default MyApp;
+  ```
+  </Tab>
 
-<Tab>
-```tsx filename="pages/privatepage.tsx"
-import {
-  ClerkProvider,
-  SignedIn,
-  SignedOut,
-  RedirectToOrganizationProfile
-} from "@clerk/clerk-react";
+  <Tab>
+  ```tsx filename="pages/privatepage.tsx"
+  import {
+    ClerkProvider,
+    SignedIn,
+    SignedOut,
+    RedirectToOrganizationProfile
+  } from "@clerk/clerk-react";
 
-function PrivatePage() {
-  return (
-    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-      <SignedIn>
-        <RedirectToOrganizationProfile/>
-      </SignedIn>
-      <SignedOut>
-        Please Sign In
-      </SignedOut>
-    </div>
-  );
-}
-```
-</Tab>
+  function PrivatePage() {
+    return (
+      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+        <SignedIn>
+          <RedirectToOrganizationProfile/>
+        </SignedIn>
+        <SignedOut>
+          Please Sign In
+        </SignedOut>
+      </div>
+    );
+  }
+  ```
+  </Tab>
 
-<Tab>
-```tsx filename="routes/index.tsx"
-import {
-  SignedIn,
-  SignedOut,
-  RedirectToOrganizationProfile
-} from "@clerk/remix";
+  <Tab>
+  ```tsx filename="routes/index.tsx"
+  import {
+    SignedIn,
+    SignedOut,
+    RedirectToOrganizationProfile
+  } from "@clerk/remix";
 
-export default function Index() {
-  return (
-    <div>
-      <SignedIn>
-        <RedirectToOrganizationProfile/>
-      </SignedIn>
-      <SignedOut>
-        <p>Please sign in </p>
-      </SignedOut>
-    </div>
-  );
-}
-```
-</Tab>
+  export default function Index() {
+    return (
+      <div>
+        <SignedIn>
+          <RedirectToOrganizationProfile/>
+        </SignedIn>
+        <SignedOut>
+          <p>Please sign in </p>
+        </SignedOut>
+      </div>
+    );
+  }
+  ```
+  </Tab>
 </Tabs>
