--- a/docs/components/control/redirect-to-signin.mdx
+++ b/docs/components/control/redirect-to-signin.mdx
@@ -9,83 +9,85 @@ The `<RedirectToSignIn />` component will navigate to the sign in URL which has 
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix']}>
-<Tab>
-```tsx filename="pages/_app.tsx"
-import {
-  ClerkProvider,
-  SignedIn,
-  SignedOut,
-  RedirectToSignIn,
-} from "@clerk/nextjs";
-import { AppProps } from "next/app";
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
+  <Tab>
+  ```tsx filename="pages/_app.tsx"
+  import {
+    ClerkProvider,
+    SignedIn,
+    SignedOut,
+    RedirectToSignIn,
+  } from "@clerk/nextjs";
+  import { AppProps } from "next/app";
 
-function MyApp({ Component, pageProps } : AppProps) {
-  return (
-    <ClerkProvider {...pageProps}>
-      <SignedIn>
-        <Component {...pageProps} />
-      </SignedIn>
-      <SignedOut>
-        <RedirectToSignIn />
-      </SignedOut>
-    </ClerkProvider>
-  );
-}
+  function MyApp({ Component, pageProps } : AppProps) {
+    return (
+      <ClerkProvider {...pageProps}>
+        <SignedIn>
+          <Component {...pageProps} />
+        </SignedIn>
+        <SignedOut>
+          <RedirectToSignIn />
+        </SignedOut>
+      </ClerkProvider>
+    );
+  }
 
-export default MyApp;
-```
-</Tab>
-<Tab>
-```tsx filename="pages/privatepage.tsx"
-import {
-  ClerkProvider,
-  SignedIn,
-  SignedOut,
-  RedirectToSignIn
-} from "@clerk/clerk-react";
+  export default MyApp;
+  ```
+  </Tab>
+  
+  <Tab>
+  ```tsx filename="pages/privatepage.tsx"
+  import {
+    ClerkProvider,
+    SignedIn,
+    SignedOut,
+    RedirectToSignIn
+  } from "@clerk/clerk-react";
 
-function PrivatePage() {
-  return (
-    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-      <SignedIn>
-        Content that is displayed to signed in
-        users.
-      </SignedIn>
-      <SignedOut>
-        <RedirectToSignIn />
-      </SignedOut>
-    </div>
-  );
-}
+  function PrivatePage() {
+    return (
+      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+        <SignedIn>
+          Content that is displayed to signed in
+          users.
+        </SignedIn>
+        <SignedOut>
+          <RedirectToSignIn />
+        </SignedOut>
+      </div>
+    );
+  }
 
-```
-</Tab>
-<Tab>
-```tsx filename="routes/index.tsx"
-import {
-  SignedIn,
-  SignedOut,
-  RedirectToSignIn,
-  UserButton,
-} from "@clerk/remix";
+  ```
+  </Tab>
 
-export default function Index() {
-  return (
-    <div>
-      <SignedIn>
-        <h1>Index route</h1>
-        <p>You are signed in!</p>
-        <UserButton />
-      </SignedIn>
-      <SignedOut>
-        <RedirectToSignIn />
-      </SignedOut>
-    </div>
-  );
-}
-```
-</Tab>
+  <Tab>
+  ```tsx filename="routes/index.tsx"
+  import {
+    SignedIn,
+    SignedOut,
+    RedirectToSignIn,
+    UserButton,
+  } from "@clerk/remix";
+
+  export default function Index() {
+    return (
+      <div>
+        <SignedIn>
+          <h1>Index route</h1>
+          <p>You are signed in!</p>
+          <UserButton />
+        </SignedIn>
+        <SignedOut>
+          <RedirectToSignIn />
+        </SignedOut>
+      </div>
+    );
+  }
+  ```
+  </Tab>
 </Tabs>
 
 ## Properties
