--- a/docs/components/customization/overview.mdx
+++ b/docs/components/customization/overview.mdx
@@ -13,7 +13,7 @@ This applies to all of the React-based packages, like [Next.js](/docs/quickstart
 
 Clerk offers [a set of themes that can be used with the `appearance` prop](/docs/components/customization/themes). The themes are available as a package called `@clerk/themes`.
 
-<CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
   npm install @clerk/themes
   ```
@@ -39,449 +39,481 @@ To apply a theme to all Clerk components, pass the `appearance` prop to the `<Cl
 
 In the example below, the `dark` theme is applied to all Clerk components.
 
-<CodeBlockTabs options={['Next.js App Router', 'Next.js Pages Router', 'React', 'Remix']}>
-```tsx filename="/src/app/layout.tsx" {2,11-13}
-import { ClerkProvider } from '@clerk/nextjs';
-import { dark } from '@clerk/themes';
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
+  <Tab>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+    ```tsx filename="/src/app/layout.tsx" {2,11-13}
+    import { ClerkProvider } from '@clerk/nextjs';
+    import { dark } from '@clerk/themes';
 
-export default function RootLayout({
-  children,
-}: {
-  children: React.ReactNode
-}) {
-  return (
-    <ClerkProvider
-      appearance={{
-        baseTheme: dark
-      }}
-    >
+    export default function RootLayout({
+      children,
+    }: {
+      children: React.ReactNode
+    }) {
+      return (
+        <ClerkProvider
+          appearance={{
+            baseTheme: dark
+          }}
+        >
+          <html lang="en">
+            <body>{children}</body>
+          </html>
+        </ClerkProvider>
+      )
+    }
+    ```
+
+    ```tsx filename="_app.tsx" {2,8,9,10}
+    import { ClerkProvider } from '@clerk/nextjs';
+    import { dark } from '@clerk/themes';
+    import type { AppProps } from "next/app";
+
+    function MyApp({ Component, pageProps }: AppProps) {
+      return (
+        <ClerkProvider
+          appearance={{
+            baseTheme: dark
+          }}
+        >
+          <Component {...pageProps}/>
+        </ClerkProvider>
+      )
+    }
+
+    export default MyApp;
+    ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app.tsx" {3,14-16}
+  import React from "react";
+  import "./App.css";
+  import { dark } from '@clerk/themes';
+  import { ClerkProvider } from "@clerk/clerk-react";
+
+  if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
+    throw new Error("Missing Publishable Key")
+  }
+  const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
+
+  function App() {
+    return (
+      <ClerkProvider 
+        appearance={{
+          baseTheme: dark
+        }} 
+        publishableKey={clerkPubKey}
+      >
+        <div>Hello from clerk</div>
+      </ClerkProvider>
+    );
+  }
+
+  export default App;
+  ```
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app/root.tsx" {3,43-45}
+  // Import ClerkApp
+  import { ClerkApp } from "@clerk/remix";
+  import { dark } from '@clerk/themes';
+  import type { MetaFunction,LoaderFunction } from "@remix-run/node";
+
+  import {
+    Links,
+    LiveReload,
+    Meta,
+    Outlet,
+    Scripts,
+    ScrollRestoration,
+  } from "@remix-run/react";
+
+  import { rootAuthLoader } from "@clerk/remix/ssr.server";
+
+  export const meta: MetaFunction = () => ({
+    charset: "utf-8",
+    title: "New Remix App",
+    viewport: "width=device-width,initial-scale=1",
+  });
+
+  export const loader: LoaderFunction = (args) => rootAuthLoader(args);
+
+  function App() {
+    return (
       <html lang="en">
-        <body>{children}</body>
+        <head>
+          <Meta />
+          <Links />
+        </head>
+        <body>
+          <Outlet />
+          <ScrollRestoration />
+          <Scripts />
+          <LiveReload />
+        </body>
       </html>
-    </ClerkProvider>
-  )
-}
-```
+    );
+  }
 
-```tsx filename="_app.tsx" {2,8,9,10}
-import { ClerkProvider } from '@clerk/nextjs';
-import { dark } from '@clerk/themes';
-import type { AppProps } from "next/app";
-
-function MyApp({ Component, pageProps }: AppProps) {
-  return (
-    <ClerkProvider
-      appearance={{
-        baseTheme: dark
-      }}
-    >
-      <Component {...pageProps}/>
-    </ClerkProvider>
-  )
-}
-
-export default MyApp;
-```
-
-```tsx filename="app.tsx" {3,14-16}
-import React from "react";
-import "./App.css";
-import { dark } from '@clerk/themes';
-import { ClerkProvider } from "@clerk/clerk-react";
-
-if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw new Error("Missing Publishable Key")
-}
-const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-
-function App() {
-  return (
-    <ClerkProvider 
-      appearance={{
-        baseTheme: dark
-      }} 
-      publishableKey={clerkPubKey}
-    >
-      <div>Hello from clerk</div>
-    </ClerkProvider>
-  );
-}
-
-export default App;
-```
-
-```tsx filename="app/root.tsx" {3,43-45}
-// Import ClerkApp
-import { ClerkApp } from "@clerk/remix";
-import { dark } from '@clerk/themes';
-import type { MetaFunction,LoaderFunction } from "@remix-run/node";
-
-import {
-  Links,
-  LiveReload,
-  Meta,
-  Outlet,
-  Scripts,
-  ScrollRestoration,
-} from "@remix-run/react";
-
-import { rootAuthLoader } from "@clerk/remix/ssr.server";
-
-export const meta: MetaFunction = () => ({
-  charset: "utf-8",
-  title: "New Remix App",
-  viewport: "width=device-width,initial-scale=1",
-});
-
-export const loader: LoaderFunction = (args) => rootAuthLoader(args);
-
-function App() {
-  return (
-    <html lang="en">
-      <head>
-        <Meta />
-        <Links />
-      </head>
-      <body>
-        <Outlet />
-        <ScrollRestoration />
-        <Scripts />
-        <LiveReload />
-      </body>
-    </html>
-  );
-}
-
-export default ClerkApp(App, {
-  appearance: {
-    baseTheme: dark,
-  },
-});
-```
-</CodeBlockTabs>
+  export default ClerkApp(App, {
+    appearance: {
+      baseTheme: dark,
+    },
+  });
+  ```
+  </Tab>
+</Tabs>
 
 You can also stack themes by passing an array of themes to the `baseTheme` property of the `appearance` prop. The themes will be applied in the order they are listed. If styles overlap, the last defined theme will take precedence.
 
 In the example below, the `dark` theme is applied first, then the `neobrutalism` theme is applied on top of it.
 
-<CodeBlockTabs options={['Next.js App Router', 'Next.js Pages Router', 'React', 'Remix']}>
-```tsx filename="/src/app/layout.tsx" {2,11-13}
-import { ClerkProvider } from '@clerk/nextjs';
-import { dark, neobrutalism } from '@clerk/themes';
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
+  <Tab>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+    ```tsx filename="/src/app/layout.tsx" {2,11-13}
+    import { ClerkProvider } from '@clerk/nextjs';
+    import { dark, neobrutalism } from '@clerk/themes';
 
-export default function RootLayout({
-  children,
-}: {
-  children: React.ReactNode
-}) {
-  return (
-    <ClerkProvider
-      appearance={{
-        baseTheme: [dark, neobrutalism]
-      }}
-    >
+    export default function RootLayout({
+      children,
+    }: {
+      children: React.ReactNode
+    }) {
+      return (
+        <ClerkProvider
+          appearance={{
+            baseTheme: [dark, neobrutalism]
+          }}
+        >
+          <html lang="en">
+            <body>{children}</body>
+          </html>
+        </ClerkProvider>
+      )
+    }
+    ```
+
+    ```tsx filename="_app.tsx" {2,8-10}
+    import { ClerkProvider, SignIn } from '@clerk/nextjs';
+    import { dark, neobrutalism } from '@clerk/themes';
+    import type { AppProps } from "next/app";
+
+    function MyApp({ Component, pageProps }: AppProps) {
+      return (
+        <ClerkProvider
+          appearance={{
+            baseTheme: [dark, neobrutalism]
+          }}
+        >
+          <Component {...pageProps}/>
+        </ClerkProvider>
+      )
+    }
+
+    export default MyApp;
+    ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app.tsx" {3,14-16}
+  import React from "react";
+  import "./App.css";
+  import { dark, neobrutalism } from '@clerk/themes';
+  import { ClerkProvider } from "@clerk/clerk-react";
+
+  if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
+    throw new Error("Missing Publishable Key")
+  }
+  const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
+
+  function App() {
+    return (
+      <ClerkProvider 
+        appearance={{
+          baseTheme: [dark, neobrutalism]
+        }} 
+        publishableKey={clerkPubKey}
+      >
+        <div>Hello from clerk</div>
+      </ClerkProvider>
+    );
+  }
+
+  export default App;
+  ```
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app/root.tsx" {3,43-45}
+  // Import ClerkApp
+  import { ClerkApp } from "@clerk/remix";
+  import { dark, neobrutalism } from '@clerk/themes';
+  import type { MetaFunction,LoaderFunction } from "@remix-run/node";
+
+  import {
+    Links,
+    LiveReload,
+    Meta,
+    Outlet,
+    Scripts,
+    ScrollRestoration,
+  } from "@remix-run/react";
+
+  import { rootAuthLoader } from "@clerk/remix/ssr.server";
+
+  export const meta: MetaFunction = () => ({
+    charset: "utf-8",
+    title: "New Remix App",
+    viewport: "width=device-width,initial-scale=1",
+  });
+
+  export const loader: LoaderFunction = (args) => rootAuthLoader(args);
+
+  function App() {
+    return (
       <html lang="en">
-        <body>{children}</body>
+        <head>
+          <Meta />
+          <Links />
+        </head>
+        <body>
+          <Outlet />
+          <ScrollRestoration />
+          <Scripts />
+          <LiveReload />
+        </body>
       </html>
-    </ClerkProvider>
-  )
-}
-```
+    );
+  }
 
-```tsx filename="_app.tsx" {2,8-10}
-import { ClerkProvider, SignIn } from '@clerk/nextjs';
-import { dark, neobrutalism } from '@clerk/themes';
-import type { AppProps } from "next/app";
-
-function MyApp({ Component, pageProps }: AppProps) {
-  return (
-    <ClerkProvider
-      appearance={{
-        baseTheme: [dark, neobrutalism]
-      }}
-    >
-      <Component {...pageProps}/>
-    </ClerkProvider>
-  )
-}
-
-export default MyApp;
-```
-
-```tsx filename="app.tsx" {3,14-16}
-import React from "react";
-import "./App.css";
-import { dark, neobrutalism } from '@clerk/themes';
-import { ClerkProvider } from "@clerk/clerk-react";
-
-if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw new Error("Missing Publishable Key")
-}
-const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-
-function App() {
-  return (
-    <ClerkProvider 
-      appearance={{
-        baseTheme: [dark, neobrutalism]
-      }} 
-      publishableKey={clerkPubKey}
-    >
-      <div>Hello from clerk</div>
-    </ClerkProvider>
-  );
-}
-
-export default App;
-```
-
-```tsx filename="app/root.tsx" {3,43-45}
-// Import ClerkApp
-import { ClerkApp } from "@clerk/remix";
-import { dark, neobrutalism } from '@clerk/themes';
-import type { MetaFunction,LoaderFunction } from "@remix-run/node";
-
-import {
-  Links,
-  LiveReload,
-  Meta,
-  Outlet,
-  Scripts,
-  ScrollRestoration,
-} from "@remix-run/react";
-
-import { rootAuthLoader } from "@clerk/remix/ssr.server";
-
-export const meta: MetaFunction = () => ({
-  charset: "utf-8",
-  title: "New Remix App",
-  viewport: "width=device-width,initial-scale=1",
-});
-
-export const loader: LoaderFunction = (args) => rootAuthLoader(args);
-
-function App() {
-  return (
-    <html lang="en">
-      <head>
-        <Meta />
-        <Links />
-      </head>
-      <body>
-        <Outlet />
-        <ScrollRestoration />
-        <Scripts />
-        <LiveReload />
-      </body>
-    </html>
-  );
-}
-
-export default ClerkApp(App, {
-  appearance: {
-    baseTheme: [dark, neobrutalism]
-  },
-});
-```
-</CodeBlockTabs>
+  export default ClerkApp(App, {
+    appearance: {
+      baseTheme: [dark, neobrutalism]
+    },
+  });
+  ```
+  </Tab>
+</Tabs>
 
 You can apply a theme to all instances of a Clerk component by passing the component to the `appearance` prop of the `<ClerkProvider />`. The `appearance` prop accepts the name of the Clerk component you want to style as a key.
 
 In the example below, the `neobrutalism` theme is applied to all instances of the [`<SignIn />`](/docs/components/authentication/sign-in) component.
 
-<CodeBlockTabs options={['Next.js App Router', 'Next.js Pages Router', 'React', 'Remix']}>
-```tsx filename="/src/app/layout.tsx" {2,11-14}
-import { ClerkProvider } from '@clerk/nextjs';
-import { dark, neobrutalism } from '@clerk/themes';
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
+  <Tab>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+    ```tsx filename="/src/app/layout.tsx" {2,11-14}
+    import { ClerkProvider } from '@clerk/nextjs';
+    import { dark, neobrutalism } from '@clerk/themes';
 
-export default function RootLayout({
-  children,
-}: {
-  children: React.ReactNode
-}) {
-  return (
-    <ClerkProvider
-      appearance={{
-        baseTheme: dark,
-        signIn: { baseTheme: neobrutalism },
-      }}
-    >
+    export default function RootLayout({
+      children,
+    }: {
+      children: React.ReactNode
+    }) {
+      return (
+        <ClerkProvider
+          appearance={{
+            baseTheme: dark,
+            signIn: { baseTheme: neobrutalism },
+          }}
+        >
+          <html lang="en">
+            <body>{children}</body>
+          </html>
+        </ClerkProvider>
+      )
+    }
+    ```
+
+    ```tsx filename="_app.tsx" {2,8-11}
+    import { ClerkProvider, SignIn } from '@clerk/nextjs';
+    import { dark } from '@clerk/themes';
+    import type { AppProps } from "next/app";
+
+    function MyApp({ Component, pageProps }: AppProps) {
+      return (
+        <ClerkProvider
+          appearance={{
+            baseTheme: dark,
+            signIn: { baseTheme: neobrutalism },
+          }}
+        >
+          <Component {...pageProps}/>
+        </ClerkProvider>
+      )
+    }
+
+    export default MyApp;
+    ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app.tsx" {3,14-17}
+  import React from "react";
+  import "./App.css";
+  import { dark } from '@clerk/themes';
+  import { ClerkProvider } from "@clerk/clerk-react";
+
+  if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
+    throw new Error("Missing Publishable Key")
+  }
+  const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
+
+  function App() {
+    return (
+      <ClerkProvider 
+        appearance={{
+          baseTheme: dark,
+          signIn: { baseTheme: neobrutalism },
+        }} 
+        publishableKey={clerkPubKey}
+      >
+        <div>Hello from clerk</div>
+      </ClerkProvider>
+    );
+  }
+
+  export default App;
+  ```
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app/root.tsx" {3,43-46}
+  // Import ClerkApp
+  import { ClerkApp } from "@clerk/remix";
+  import { dark } from '@clerk/themes';
+  import type { MetaFunction,LoaderFunction } from "@remix-run/node";
+
+  import {
+    Links,
+    LiveReload,
+    Meta,
+    Outlet,
+    Scripts,
+    ScrollRestoration,
+  } from "@remix-run/react";
+
+  import { rootAuthLoader } from "@clerk/remix/ssr.server";
+
+  export const meta: MetaFunction = () => ({
+    charset: "utf-8",
+    title: "New Remix App",
+    viewport: "width=device-width,initial-scale=1",
+  });
+
+  export const loader: LoaderFunction = (args) => rootAuthLoader(args);
+
+  function App() {
+    return (
       <html lang="en">
-        <body>{children}</body>
+        <head>
+          <Meta />
+          <Links />
+        </head>
+        <body>
+          <Outlet />
+          <ScrollRestoration />
+          <Scripts />
+          <LiveReload />
+        </body>
       </html>
-    </ClerkProvider>
-  )
-}
-```
+    );
+  }
 
-```tsx filename="_app.tsx" {2,8-11}
-import { ClerkProvider, SignIn } from '@clerk/nextjs';
-import { dark } from '@clerk/themes';
-import type { AppProps } from "next/app";
-
-function MyApp({ Component, pageProps }: AppProps) {
-  return (
-    <ClerkProvider
-      appearance={{
-        baseTheme: dark,
-        signIn: { baseTheme: neobrutalism },
-      }}
-    >
-      <Component {...pageProps}/>
-    </ClerkProvider>
-  )
-}
-
-export default MyApp;
-```
-
-```tsx filename="app.tsx" {3,14-17}
-import React from "react";
-import "./App.css";
-import { dark } from '@clerk/themes';
-import { ClerkProvider } from "@clerk/clerk-react";
-
-if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw new Error("Missing Publishable Key")
-}
-const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-
-function App() {
-  return (
-    <ClerkProvider 
-      appearance={{
-        baseTheme: dark,
-        signIn: { baseTheme: neobrutalism },
-      }} 
-      publishableKey={clerkPubKey}
-    >
-      <div>Hello from clerk</div>
-    </ClerkProvider>
-  );
-}
-
-export default App;
-```
-
-```tsx filename="app/root.tsx" {3,43-46}
-// Import ClerkApp
-import { ClerkApp } from "@clerk/remix";
-import { dark } from '@clerk/themes';
-import type { MetaFunction,LoaderFunction } from "@remix-run/node";
-
-import {
-  Links,
-  LiveReload,
-  Meta,
-  Outlet,
-  Scripts,
-  ScrollRestoration,
-} from "@remix-run/react";
-
-import { rootAuthLoader } from "@clerk/remix/ssr.server";
-
-export const meta: MetaFunction = () => ({
-  charset: "utf-8",
-  title: "New Remix App",
-  viewport: "width=device-width,initial-scale=1",
-});
-
-export const loader: LoaderFunction = (args) => rootAuthLoader(args);
-
-function App() {
-  return (
-    <html lang="en">
-      <head>
-        <Meta />
-        <Links />
-      </head>
-      <body>
-        <Outlet />
-        <ScrollRestoration />
-        <Scripts />
-        <LiveReload />
-      </body>
-    </html>
-  );
-}
-
-export default ClerkApp(App, {
-  appearance: {
-    baseTheme: dark,
-    signIn: { baseTheme: neobrutalism },
-  },
-});
-```
-</CodeBlockTabs>
+  export default ClerkApp(App, {
+    appearance: {
+      baseTheme: dark,
+      signIn: { baseTheme: neobrutalism },
+    },
+  });
+  ```
+  </Tab>
+</Tabs>
 
 #### Pass a theme to a single Clerk component
 
 To apply a theme to a single Clerk component, pass the `appearance` prop to the component. The `appearance` prop accepts the property `baseTheme`, which can be set to a theme.
 
-<CodeBlockTabs options={['Next.js App Router', 'Next.js Pages Router', 'React', 'Remix']}>
-```tsx filename="/app/sign-in/[[...sign-in]]/page.tsx" {2,6-8}
-import { SignIn } from "@clerk/nextjs";
-import { dark } from "@clerk/themes";
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
+  <Tab>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+    ```tsx filename="/app/sign-in/[[...sign-in]]/page.tsx" {2,6-8}
+    import { SignIn } from "@clerk/nextjs";
+    import { dark } from "@clerk/themes";
 
-export default function Page() {
-  return <SignIn 
-    appearance={{
-      baseTheme: dark
-    }}
-  />;
-}
-```
+    export default function Page() {
+      return <SignIn 
+        appearance={{
+          baseTheme: dark
+        }}
+      />;
+    }
+    ```
 
-```tsx filename="/pages/sign-in/[[...index]].tsx" {2,6-8}
-import { SignIn } from "@clerk/nextjs";
-import { dark } from "@clerk/themes";
- 
-const SignInPage = () => (
-  <SignIn 
-    appearance={{
-      baseTheme: dark
-    }}
-  />
-);
-
-export default SignInPage;
-```
-
-```tsx filename="/src/sign-in/[[...index]].tsx" {2,6-8}
-import { SignIn } from "@clerk/clerk-react";
-import { dark } from "@clerk/themes";
-
-const SignInPage = () => (
-  <SignIn 
-    appearance={{
-      baseTheme: dark
-    }}
-  />
-);
-
-export default SignInPage;
-```
-
-```tsx filename="app/routes/sign-in/$.tsx" {2,9-11}
-import { SignIn } from "@clerk/remix";
-import { dark } from "@clerk/themes";
- 
-export default function SignInPage() {
-  return (
-    <div style={{ border: "2px solid blue", padding: "2rem" }}>
-      <h1>Sign In route</h1>
+    ```tsx filename="/pages/sign-in/[[...index]].tsx" {2,6-8}
+    import { SignIn } from "@clerk/nextjs";
+    import { dark } from "@clerk/themes";
+    
+    const SignInPage = () => (
       <SignIn 
         appearance={{
           baseTheme: dark
         }}
-        routing={"path"} 
-        path={"/sign-in"} 
       />
-    </div>
+    );
+
+    export default SignInPage;
+    ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+  ```tsx filename="/src/sign-in/[[...index]].tsx" {2,6-8}
+  import { SignIn } from "@clerk/clerk-react";
+  import { dark } from "@clerk/themes";
+
+  const SignInPage = () => (
+    <SignIn 
+      appearance={{
+        baseTheme: dark
+      }}
+    />
   );
-}
-```
-</CodeBlockTabs>
+
+  export default SignInPage;
+  ```
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app/routes/sign-in/$.tsx" {2,9-11}
+  import { SignIn } from "@clerk/remix";
+  import { dark } from "@clerk/themes";
+  
+  export default function SignInPage() {
+    return (
+      <div style={{ border: "2px solid blue", padding: "2rem" }}>
+        <h1>Sign In route</h1>
+        <SignIn 
+          appearance={{
+            baseTheme: dark
+          }}
+          routing={"path"} 
+          path={"/sign-in"} 
+        />
+      </div>
+    );
+  }
+  ```
+  </Tab>
+</Tabs>
 
 ## Customize a theme using variables
 
@@ -493,146 +525,154 @@ In the example below, all Clerk components will have the `dark` theme with the `
   For a list of all of the variables you can customize, and for more examples on how to use the `variables` property, see the [Variables](/docs/components/customization/variables) docs.
 </Callout>
 
-<CodeBlockTabs options={['Next.js App Router', 'Next.js Pages Router', 'React', 'Remix']}>
-```tsx filename="/src/app/layout.tsx" {2,11-18}
-import { ClerkProvider } from '@clerk/nextjs';
-import { dark, neobrutalism, shadesOfPurple } from '@clerk/themes';
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
+  <Tab>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+    ```tsx filename="/src/app/layout.tsx" {2,11-18}
+    import { ClerkProvider } from '@clerk/nextjs';
+    import { dark, neobrutalism, shadesOfPurple } from '@clerk/themes';
 
-export default function RootLayout({
-  children,
-}: {
-  children: React.ReactNode
-}) {
-  return (
-    <ClerkProvider
-      appearance={{
-        baseTheme: [dark, neobrutalism],
-        variables: { colorPrimary: 'red' },
-        signIn: { 
-          baseTheme: [shadesOfPurple], 
-          variables: { colorPrimary: 'blue' }
-        }
-      }}
-    >
-      <html lang="en">
-        <body>{children}</body>
-      </html>
-    </ClerkProvider>
-  )
-}
-```
-
-```tsx filename="_app.tsx" {2,8-15}
-import { ClerkProvider } from '@clerk/nextjs';
-import { dark, neobrutalism, shadesOfPurple } from '@clerk/themes';
-import type { AppProps } from "next/app";
-
-function MyApp({ Component, pageProps }: AppProps) {
-  return (
-    <ClerkProvider
-      appearance={{
-        baseTheme: [dark, neobrutalism],
-        variables: { colorPrimary: 'red' },
-        signIn: { 
-          baseTheme: [shadesOfPurple], 
-          variables: { colorPrimary: 'blue' }
-        }
-      }}
-    >
-      <Component {...pageProps}/>
-    </ClerkProvider>
-  )
-}
-
-export default MyApp;
-```
-
-```tsx filename="app.tsx" {3,14-21}
-import React from "react";
-import "./App.css";
-import { dark, neobrutalism, shadesOfPurple } from '@clerk/themes';
-import { ClerkProvider } from "@clerk/clerk-react";
-
-if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw new Error("Missing Publishable Key")
-}
-const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-
-function App() {
-  return (
-    <ClerkProvider 
-      appearance={{
-        baseTheme: [dark, neobrutalism],
-        variables: { colorPrimary: 'red' },
-        signIn: { 
-          baseTheme: [shadesOfPurple], 
-          variables: { colorPrimary: 'blue' }
-        }
-      }}
-      publishableKey={clerkPubKey}
-    >
-      <div>Hello from clerk</div>
-    </ClerkProvider>
-  );
-}
-
-export default App;
-```
-
-```tsx filename="app/root.tsx" {3,43-50}
-// Import ClerkApp
-import { ClerkApp } from "@clerk/remix";
-import { dark, neobrutalism, shadesOfPurple } from '@clerk/themes';
-import type { MetaFunction,LoaderFunction } from "@remix-run/node";
-
-import {
-  Links,
-  LiveReload,
-  Meta,
-  Outlet,
-  Scripts,
-  ScrollRestoration,
-} from "@remix-run/react";
-
-import { rootAuthLoader } from "@clerk/remix/ssr.server";
-
-export const meta: MetaFunction = () => ({
-  charset: "utf-8",
-  title: "New Remix App",
-  viewport: "width=device-width,initial-scale=1",
-});
-
-export const loader: LoaderFunction = (args) => rootAuthLoader(args);
-
-function App() {
-  return (
-    <html lang="en">
-      <head>
-        <Meta />
-        <Links />
-      </head>
-      <body>
-        <Outlet />
-        <ScrollRestoration />
-        <Scripts />
-        <LiveReload />
-      </body>
-    </html>
-  );
-}
-
-export default ClerkApp(App, {
-  appearance={{
-    baseTheme: [dark, neobrutalism],
-    variables: { colorPrimary: 'red' },
-    signIn: { 
-      baseTheme: [shadesOfPurple], 
-      variables: { colorPrimary: 'blue' }
+    export default function RootLayout({
+      children,
+    }: {
+      children: React.ReactNode
+    }) {
+      return (
+        <ClerkProvider
+          appearance={{
+            baseTheme: [dark, neobrutalism],
+            variables: { colorPrimary: 'red' },
+            signIn: { 
+              baseTheme: [shadesOfPurple], 
+              variables: { colorPrimary: 'blue' }
+            }
+          }}
+        >
+          <html lang="en">
+            <body>{children}</body>
+          </html>
+        </ClerkProvider>
+      )
     }
-  }}
-});
-```
-</CodeBlockTabs>
+    ```
+
+    ```tsx filename="_app.tsx" {2,8-15}
+    import { ClerkProvider } from '@clerk/nextjs';
+    import { dark, neobrutalism, shadesOfPurple } from '@clerk/themes';
+    import type { AppProps } from "next/app";
+
+    function MyApp({ Component, pageProps }: AppProps) {
+      return (
+        <ClerkProvider
+          appearance={{
+            baseTheme: [dark, neobrutalism],
+            variables: { colorPrimary: 'red' },
+            signIn: { 
+              baseTheme: [shadesOfPurple], 
+              variables: { colorPrimary: 'blue' }
+            }
+          }}
+        >
+          <Component {...pageProps}/>
+        </ClerkProvider>
+      )
+    }
+
+    export default MyApp;
+    ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app.tsx" {3,14-21}
+  import React from "react";
+  import "./App.css";
+  import { dark, neobrutalism, shadesOfPurple } from '@clerk/themes';
+  import { ClerkProvider } from "@clerk/clerk-react";
+
+  if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
+    throw new Error("Missing Publishable Key")
+  }
+  const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
+
+  function App() {
+    return (
+      <ClerkProvider 
+        appearance={{
+          baseTheme: [dark, neobrutalism],
+          variables: { colorPrimary: 'red' },
+          signIn: { 
+            baseTheme: [shadesOfPurple], 
+            variables: { colorPrimary: 'blue' }
+          }
+        }}
+        publishableKey={clerkPubKey}
+      >
+        <div>Hello from clerk</div>
+      </ClerkProvider>
+    );
+  }
+
+  export default App;
+  ```
+  </Tab>
+
+  <Tab>
+  ```tsx filename="app/root.tsx" {3,43-50}
+  // Import ClerkApp
+  import { ClerkApp } from "@clerk/remix";
+  import { dark, neobrutalism, shadesOfPurple } from '@clerk/themes';
+  import type { MetaFunction,LoaderFunction } from "@remix-run/node";
+
+  import {
+    Links,
+    LiveReload,
+    Meta,
+    Outlet,
+    Scripts,
+    ScrollRestoration,
+  } from "@remix-run/react";
+
+  import { rootAuthLoader } from "@clerk/remix/ssr.server";
+
+  export const meta: MetaFunction = () => ({
+    charset: "utf-8",
+    title: "New Remix App",
+    viewport: "width=device-width,initial-scale=1",
+  });
+
+  export const loader: LoaderFunction = (args) => rootAuthLoader(args);
+
+  function App() {
+    return (
+      <html lang="en">
+        <head>
+          <Meta />
+          <Links />
+        </head>
+        <body>
+          <Outlet />
+          <ScrollRestoration />
+          <Scripts />
+          <LiveReload />
+        </body>
+      </html>
+    );
+  }
+
+  export default ClerkApp(App, {
+    appearance={{
+      baseTheme: [dark, neobrutalism],
+      variables: { colorPrimary: 'red' },
+      signIn: { 
+        baseTheme: [shadesOfPurple], 
+        variables: { colorPrimary: 'blue' }
+      }
+    }}
+  });
+  ```
+  </Tab>
+</Tabs>
 
 ## Create a custom theme
 
@@ -640,11 +680,11 @@ You can make a custom theme for your app's Clerk component by customizing the st
 
 This can be done with one of three different methods of styling:
 
-1.  [Using global CSS styling](#global-css)
-2.  [Passing custom CSS classes](#using-custom-css-classes)
-    *   [Using Tailwind](#using-tailwind)
-    *   [Using CSS Modules](#using-css-modules)
-3.  [Passing inline CSS to your Clerk options](#inline-css-objects)
+1. [Using global CSS styling](#global-css)
+2. [Passing custom CSS classes](#using-custom-css-classes)
+  * [Using Tailwind](#using-tailwind)
+  * [Using CSS Modules](#using-css-modules)
+3. [Passing inline CSS to your Clerk options](#inline-css-objects)
 
 No matter which method you choose, you'll need to know how to identify the element you want to style.
 
