--- a/docs/components/organization/organization-profile.mdx
+++ b/docs/components/organization/organization-profile.mdx
@@ -16,11 +16,11 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix']}>
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
     You can embed the `<OrganizationProfile />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application.
   
-    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
       ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.[jsx/tsx]"
       import { OrganizationProfile } from "@clerk/nextjs";
 
