--- a/docs/components/unstyled/sign-in-with-metamask.mdx
+++ b/docs/components/unstyled/sign-in-with-metamask.mdx
@@ -11,7 +11,7 @@ The `<SignInWithMetamaskButton />` component is used to complete a one-click, cr
 
 #### Basic usage
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<CodeBlockTabs type="framework" options={["Next.js", "React", "Remix", "Gatsby"]}>
   ```jsx filename="pages/index.js"
   import { SignInWithMetamaskButton } from "@clerk/nextjs";
 
@@ -69,7 +69,7 @@ The `<SignInWithMetamaskButton />` component is used to complete a one-click, cr
 
 In some cases you will want to use your own button, or button text. You can do that by wrapping your button up.
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<CodeBlockTabs type="framework" options={["Next.js", "React", "Remix", "Gatsby"]}>
   ```jsx filename="pages/index.js"
   import { SignInWithMetamaskButton } from "@clerk/nextjs";
 
