--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -13,9 +13,9 @@ The `<SignOutButton />` component is a button that signs a user out. By default,
 
 The example below shows how to use the `<SignOutButton />` component. 
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby"]}>
   <Tab>
-    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
       ```jsx filename="app/page.js"
       import { SignOutButton } from "@clerk/nextjs";
 
@@ -94,9 +94,9 @@ The example below shows how to use the `<SignOutButton />` component.
 
 You can create a custom button by wrapping your own button, or button text, in the `<SignOutButton />` component.
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby"]}>
   <Tab>
-    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
       ```jsx filename="app/page.js"
       import { SignOutButton } from "@clerk/nextjs";
 
@@ -189,9 +189,9 @@ You can sign out of a specific session by passing in a `sessionId` to the `signO
 
 In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/references/react/use-auth) hook.
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby"]}>
   <Tab>
-    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
       ```tsx filename="app/page.tsx"
       "use client"
       
@@ -329,9 +329,9 @@ You can sign out of all currently active sessions by passing a callback that ret
 
 In the example below, the `signOut()` method is retrieved from the [`useClerk()`](/docs/references/react/use-clerk) hook.
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby"]}>
   <Tab>
-    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
       ```tsx filename="app/page.tsx"
       "use client";
 
