--- a/docs/components/unstyled/sign-up-button.mdx
+++ b/docs/components/unstyled/sign-up-button.mdx
@@ -11,7 +11,7 @@ The `<SignUpButton />` component is a button that links to the sign-up page or d
 
 #### Basic usage
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<CodeBlockTabs type="framework" options={["Next.js", "React", "Remix", "Gatsby"]}>
   ```jsx filename="pages/index.js"
   import { SignUpButton } from "@clerk/nextjs";
 
@@ -69,7 +69,7 @@ The `<SignUpButton />` component is a button that links to the sign-up page or d
 
 In some cases you will want to use your own button, or button text. You can do that by wrapping your button up.
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<CodeBlockTabs type="framework" options={["Next.js", "React", "Remix", "Gatsby"]}>
   ```jsx filename="pages/index.js"
   import { SignUpButton } from "@clerk/nextjs";
 
