--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -15,9 +15,9 @@ Clerk is the only provider with multi-session support, allowing users to sign in
 
 In this example, `<UserButton />` is mounted inside a header component, which is a common pattern on many websites and applications. When the user is signed in, they will see their avatar and be able to open the popup menu.
 
-<Tabs items={['Next.js', 'React', 'Remix']}>
+<Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
-    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
       ```jsx filename="layout.[jsx/tsx]"
       import {
         ClerkProvider,
