--- a/docs/custom-flows/oauth-connections.mdx
+++ b/docs/custom-flows/oauth-connections.mdx
@@ -18,7 +18,7 @@ When using OAuth, the sign-in and sign-up are equivalent. A successful OAuth flo
 
 The React example below uses `react-router-dom` to define the required route. For NextJS apps, you only need to create a `pages/sso-callback` file.
 
-<CodeBlockTabs options={["React"]}>
+<CodeBlockTabs type="framework" options={["React"]}>
 ```jsx
 import React from "react";
 import {
@@ -133,7 +133,7 @@ When a user initiates an OAuth verification during sign-in or sign-up, it may so
 
 For example, if someone already has an account, and tries to go through the sign up flow with the same OAuth account, they can't perform a successful sign-up again. Or, if someone attempts to sign in with their OAuth credentials but does not yet have an account, they won't be signed in to the account. For these scenarios, Clerk provides "account transfers."
 
-<CodeBlockTabs options={["JavaScript"]}>
+<CodeBlockTabs type="framework" options={["JavaScript"]}>
 ```js
 // Get sign-in and sign-up objects in the OAuth callback page
 const { signIn, signUp } = window.Clerk.client;
