--- a/docs/organizations/viewing-memberships.mdx
+++ b/docs/organizations/viewing-memberships.mdx
@@ -19,7 +19,7 @@ You can use the `getOrganizationMembershipList()` method to retrieve a list of m
 
 {/* TODO (DOCS-316): Update and validate these code examples. */}
 
-<CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["Next.js", "React", "JavaScript"]}>
 ```tsx filename="pages/joined-organizations.tsx"
 import { useOrganizationList } from "@clerk/nextjs";
 import React from "react";
