--- a/docs/quickstarts/fastify.mdx
+++ b/docs/quickstarts/fastify.mdx
@@ -24,7 +24,7 @@ If you're looking for a more complete example, check out our [Fastify example ap
 <Steps>
 ### Install `@clerk/fastify`
 
-<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
   npm install @clerk/fastify
   ```
@@ -54,7 +54,7 @@ CLERK_SECRET_KEY={{secret}}
 
 This examples uses `dotenv` to load the environment variables. You can use any other library or method, if you so wish.
 
-<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
   npm install dotenv
   npm install -D @types/dotenv
