--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -9,38 +9,38 @@ The [Clerk Backend SDK](https://github.com/clerk/javascript/tree/main/packages/b
 
 Clerk SDKs expose an instance of the Clerk Backend SDK for use in server environments.
 
-<Tabs items={["Next.js", "Remix", "Fastify", "Node"]}>
-<Tab>
-The Backend SDK is accessible via the `clerkClient` object if you are using Next.js.
+<Tabs type="framework" items={["Next.js", "Remix", "Fastify", "Node"]}>
+  <Tab>
+  The Backend SDK is accessible via the `clerkClient` object if you are using Next.js.
 
-```jsx
-import { clerkClient } from '@clerk/nextjs';
-```
-</Tab>
+  ```jsx
+  import { clerkClient } from '@clerk/nextjs';
+  ```
+  </Tab>
 
-<Tab>
-The Backend SDK is accessible via the `createClerkClient` function if you are using Remix. 
+  <Tab>
+  The Backend SDK is accessible via the `createClerkClient` function if you are using Remix. 
 
-```jsx
-import { createClerkClient } from '@clerk/remix/api.server';
-```
-</Tab>
+  ```jsx
+  import { createClerkClient } from '@clerk/remix/api.server';
+  ```
+  </Tab>
 
-<Tab>
-The Backend SDK is accessible via the `clerkClient` object if you are using Fastify.
+  <Tab>
+  The Backend SDK is accessible via the `clerkClient` object if you are using Fastify.
 
-```jsx
-import { clerkClient } from "@clerk/fastify";
-```
-</Tab>
+  ```jsx
+  import { clerkClient } from "@clerk/fastify";
+  ```
+  </Tab>
 
-<Tab>
-The Backend SDK is accessible via the `clerkClient` object if you are using Node.
+  <Tab>
+  The Backend SDK is accessible via the `clerkClient` object if you are using Node.
 
-```js
-import clerkClient from '@clerk/clerk-sdk-node';
-```
-</Tab>
+  ```js
+  import clerkClient from '@clerk/clerk-sdk-node';
+  ```
+  </Tab>
 </Tabs>
 
 ## User operations
