--- a/docs/references/javascript/clerk/create-organization.mdx
+++ b/docs/references/javascript/clerk/create-organization.mdx
@@ -15,7 +15,7 @@ Render the [`<CreateOrganization />`][createorg-ref] component to an HTML `<div>
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {15-19}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
@@ -79,7 +79,7 @@ Unmount and run cleanup on an existing [`<CreateOrganization />`][createorg-ref]
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {19}
   import Clerk from '@clerk/clerk-js';
 
@@ -142,7 +142,7 @@ Opens the [`<CreateOrganization />`][createorg-ref] component as an overlay at t
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {7-11}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
@@ -194,7 +194,7 @@ Closes the organization profile overlay.
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {11}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
