--- a/docs/references/javascript/clerk/organization-profile.mdx
+++ b/docs/references/javascript/clerk/organization-profile.mdx
@@ -15,7 +15,7 @@ Render the [`<OrganizationProfile />`][orgprofile-ref] component to an HTML `<di
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {15-19}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
@@ -79,7 +79,7 @@ Unmount and run cleanup on an existing [`<OrganizationProfile />`][orgprofile-re
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {19}
   import Clerk from '@clerk/clerk-js';
 
@@ -142,7 +142,7 @@ Opens the [`<OrganizationProfile />`][orgprofile-ref] component as an overlay at
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {7-11}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
@@ -194,7 +194,7 @@ Closes the organization profile overlay.
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {11}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
@@ -241,7 +241,7 @@ function closeOrganizationProfile(): void;
 You can add customized pages for the [`<OrganizationProfile />`][orgprofile-ref] component by using the `customPages` prop.
 
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {11}
   import Clerk from '@clerk/clerk-js';
 
