--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -17,7 +17,7 @@ Render the [`<SignIn />`][signin-ref] component to an HTML `<div>` element.
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {15-19}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
@@ -81,7 +81,7 @@ Unmount and run cleanup on an existing [`<SignIn />`][signin-ref] component inst
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {19}
   import Clerk from '@clerk/clerk-js';
 
@@ -144,7 +144,7 @@ Opens the `<SignIn />` component as an overlay at the root of your HTML `body` e
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {7-11}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
@@ -196,7 +196,7 @@ Closes the sign in overlay.
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {11}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
