--- a/docs/references/javascript/clerk/user-profile.mdx
+++ b/docs/references/javascript/clerk/user-profile.mdx
@@ -15,7 +15,7 @@ Render the [`<UserProfile />`][userprofile-ref] component to an HTML `<div>` ele
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {15-19}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
@@ -79,7 +79,7 @@ Unmount and run cleanup on an existing [`<UserProfile />`][userprofile-ref] comp
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {19}
   import Clerk from '@clerk/clerk-js';
 
@@ -142,7 +142,7 @@ Opens the [`<UserProfile />`][userprofile-ref] component as an overlay at the ro
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {7-11}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
@@ -194,7 +194,7 @@ Closes the user profile overlay.
 
 ### Usage
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {11}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
@@ -240,97 +240,97 @@ function closeUserProfile(): void;
 
 You can add customized pages for the [`<UserProfile />`][userprofile-ref] component by using the `customPages` prop.
 
-<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
-    ```typescript {11}
-    import Clerk from '@clerk/clerk-js';
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
+```typescript {11}
+import Clerk from '@clerk/clerk-js';
 
-    const clerk = new Clerk('pk_[publishable_key]');
-    await clerk.load();
+const clerk = new Clerk('pk_[publishable_key]');
+await clerk.load();
 
-    clerk.openUserProfile({
-        customPages: [
-            {
-                url: "custom-page",
-                label: "Custom Page",
-                mountIcon: (el) => {
-                    el.innerHTML = "👋";
-                },
-                unmountIcon: (el) => {
-                    el.innerHTML = "";
-                },
-                mount: (el) => {
+clerk.openUserProfile({
+    customPages: [
+        {
+            url: "custom-page",
+            label: "Custom Page",
+            mountIcon: (el) => {
+                el.innerHTML = "👋";
+            },
+            unmountIcon: (el) => {
+                el.innerHTML = "";
+            },
+            mount: (el) => {
+                el.innerHTML = `
+                      <h1><b>Custom Page</b></h1>
+                      <p>This is the content of the custom page.</p>
+                      `;
+            },
+            unmount: (el) => {
+                el.innerHTML = "";
+            },
+        },
+        {
+            url: "/other-page",
+            label: "Other Page",
+            mountIcon: (el) => {
+                el.innerHTML = "🌐";
+            },
+            unmountIcon: (el) => {
+                el.innerHTML = "";
+            },
+        }
+    ]
+});
+
+```
+
+```html {14}
+<script>
+    const script = document.createElement('script');
+    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
+    script.async = true;
+    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+
+    script.addEventListener('load', async function () {
+        await window.Clerk.load();
+
+        window.Clerk.openUserProfile({
+            customPages: [
+                {
+                    url: "custom-page",
+                    label: "Custom Page",
+                    mountIcon: (el) => {
+                        el.innerHTML = "👋";
+                    },
+                    unmountIcon: (el) => {
+                        el.innerHTML = "";
+                    },
+                    mount: (el) => {
                     el.innerHTML = `
                           <h1><b>Custom Page</b></h1>
                           <p>This is the content of the custom page.</p>
                           `;
-                },
-                unmount: (el) => {
-                    el.innerHTML = "";
-                },
-            },
-            {
-                url: "/other-page",
-                label: "Other Page",
-                mountIcon: (el) => {
-                    el.innerHTML = "🌐";
-                },
-                unmountIcon: (el) => {
-                    el.innerHTML = "";
-                },
-            }
-        ]
-    });
-
-    ```
-
-    ```html {14}
-    <script>
-        const script = document.createElement('script');
-        script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-        script.async = true;
-        script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
-
-        script.addEventListener('load', async function () {
-            await window.Clerk.load();
-
-            window.Clerk.openUserProfile({
-                customPages: [
-                    {
-                        url: "custom-page",
-                        label: "Custom Page",
-                        mountIcon: (el) => {
-                            el.innerHTML = "👋";
-                        },
-                        unmountIcon: (el) => {
-                            el.innerHTML = "";
-                        },
-                        mount: (el) => {
-                        el.innerHTML = `
-                              <h1><b>Custom Page</b></h1>
-                              <p>This is the content of the custom page.</p>
-                              `;
-                        },
-                        unmount: (el) => {
-                            el.innerHTML = "";
-                        },
                     },
-                    {
-                        url: "/other-page",
-                        label: "Other Page",
-                        mountIcon: (el) => {
-                            el.innerHTML = "🌐";
-                        },
-                        unmountIcon: (el) => {
-                            el.innerHTML = "";
-                        },
-                    }
-                ]
-            });
-
+                    unmount: (el) => {
+                        el.innerHTML = "";
+                    },
+                },
+                {
+                    url: "/other-page",
+                    label: "Other Page",
+                    mountIcon: (el) => {
+                        el.innerHTML = "🌐";
+                    },
+                    unmountIcon: (el) => {
+                        el.innerHTML = "";
+                    },
+                }
+            ]
         });
-        document.body.appendChild(script);
-    </script>
-    ```
+
+    });
+    document.body.appendChild(script);
+</script>
+```
 </CodeBlockTabs>
 
 ## `UserProfileProps`
