--- a/docs/references/nextjs/custom-signup-signin-pages.mdx
+++ b/docs/references/nextjs/custom-signup-signin-pages.mdx
@@ -17,44 +17,44 @@ Clerk offers a set of [prebuilt components](/docs/components/overview) and [cust
 
 Create a new file that will be used to render the sign-up page. In the file, import the [`<SignUp />`](/docs/components/authentication/sign-up) component from `@clerk/nextjs` and render it.
 
-<CodeBlockTabs options={["App Router", "Pages Router"]}>
-  ```tsx filename="app/sign-up/[[...sign-up]]/page.tsx"
-  import { SignUp } from "@clerk/nextjs";
+<CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+```tsx filename="app/sign-up/[[...sign-up]]/page.tsx"
+import { SignUp } from "@clerk/nextjs";
 
-  export default function Page() {
-    return <SignUp />;
-  }
-  ```
+export default function Page() {
+  return <SignUp />;
+}
+```
 
-  ```tsx filename="/pages/sign-up/[[...index]].tsx"
-  import { SignUp } from "@clerk/nextjs";
+```tsx filename="/pages/sign-up/[[...index]].tsx"
+import { SignUp } from "@clerk/nextjs";
 
-  export default function Page() {
-    return <SignUp />;
-  }
-  ```
+export default function Page() {
+  return <SignUp />;
+}
+```
 </CodeBlockTabs>
 
 ### Build your sign-in page
 
 Create a new file that will be used to render the sign-up page. In the file, import the [`<SignIn />`](/docs/components/authentication/sign-in) component from `@clerk/nextjs` and render it.
 
-<CodeBlockTabs options={["App Router", "Pages Router"]}>
-  ```tsx filename="app/sign-in/[[...sign-in]]/page.tsx"
-  import { SignIn } from "@clerk/nextjs";
+<CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+```tsx filename="app/sign-in/[[...sign-in]]/page.tsx"
+import { SignIn } from "@clerk/nextjs";
 
-  export default function Page() {
-    return <SignIn />;
-  }
-  ```
+export default function Page() {
+  return <SignIn />;
+}
+```
 
-  ```tsx filename="/pages/sign-in/[[...index]].tsx"
-  import { SignIn } from "@clerk/nextjs";
+```tsx filename="/pages/sign-in/[[...index]].tsx"
+import { SignIn } from "@clerk/nextjs";
 
-  export default function Page() {
-    return <SignIn />;
-  }
-  ```
+export default function Page() {
+  return <SignIn />;
+}
+```
 </CodeBlockTabs>
 
 ### Update your environment variables
