--- a/docs/references/react/use-auth.mdx
+++ b/docs/references/react/use-auth.mdx
@@ -9,9 +9,9 @@ The `useAuth()` hook is a convenient way to access the current auth state. This 
 
 ## Usage
 
-<Tabs items={['Next.js', 'React']}>
+<Tabs type="framework" items={["Next.js", "React"]}>
   <Tab>
-    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
       ```tsx filename="/app/pageWithData/clientComponent.tsx"
       "use client";
 
