--- a/docs/references/react/use-organization-list.mdx
+++ b/docs/references/react/use-organization-list.mdx
@@ -16,7 +16,7 @@ The `useOrganizationList` hook requires developers to opt-in by specifying which
 </Callout>
 
 ### Infinite list of joined organizations
-<CodeBlockTabs options={['Next.js', 'React']}>
+<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
 ```tsx filename="pages/joined-organizations.tsx"
 import { useOrganizationList } from "@clerk/nextjs";
 import React from "react";
@@ -105,7 +105,7 @@ export default JoinedOrganizationList;
 </CodeBlockTabs>
 
 ### Table of invitations
-<CodeBlockTabs options={['Next.js', 'React']}>
+<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
 ```tsx filename="pages/joined-organizations.tsx"
 import { useOrganizationList } from "@clerk/nextjs";
 import React from "react";
