--- a/docs/references/react/use-session-list.mdx
+++ b/docs/references/react/use-session-list.mdx
@@ -9,7 +9,7 @@ The `useSessionList()` hook returns an array of [`Session`](/docs/references/jav
 
 ## Usage
 
-<CodeBlockTabs options={['Next.js', 'React']}>
+<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
 ```tsx filename="pages/index.tsx"
 import { useSessionList } from "@clerk/nextjs";
 
