--- a/docs/references/react/use-session.mdx
+++ b/docs/references/react/use-session.mdx
@@ -9,7 +9,7 @@ The `useSession()` hook provides access to the current user's [`Session`](/docs/
 
 ## Usage
 
-<CodeBlockTabs options={['Next.js', 'React']}>
+<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
 ```tsx filename="pages/index.tsx"
 import { useSession } from "@clerk/nextjs";
 
